--- a/laxaNam/prastutiH/vishvanAtha-sAhitya-darpaNaH/01.md
+++ b/laxaNam/prastutiH/vishvanAtha-sAhitya-darpaNaH/01.md
@@ -6,8 +6,8 @@ title = "०१"
 
 ग्रन्थारम्भे निर्विन्घेन प्रारिप्सितपरिसमाप्तिकामो वाङ्मयाधिकृततया वाग्देवतायाः साम्मुख्यमाधत्ते--
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, क) वीक्ष्य कौस्तुभगतं निजबिम्बं हृद्रतान्यवनिताजनबुद्ध्या ।  
@@ -46,13 +46,14 @@ title = "०१"
 प्रारिप्सितं प्रारब्धुमिष्टं दृश्यश्रव्यकाव्यनिरूपकं प्रमेयजातम्, तस्य परिसमाप्तिर्यावद्विवक्षितार्थस्यास्खलनपूर्वकं समापनम् ।  
 वाङ्मयेत्यनेन स्वशास्त्रविधेयवग्वैभवदातृतया ह्मादिदेवाराध्यत्वेन भगवत्याः प्रकृतार्थनिर्वाहकत्वं सूचितम् ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 शरदिन्दुसुन्दररुचिश्चेतसि सा मे गिरं देवी ।  
 अपहृत्य तमः सन्ततमर्थानखिलान्प्रकाशयतु ॥ विस्स्द्_१।१ ॥
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ख) शरदिन्द्वित्यादि ।  
@@ -66,7 +67,8 @@ title = "०१"
 सेति तच्छब्दाच्चतुराननादिवाग्वैभवादिदातृतया प्रसिद्धा ।  
 तमो ऽज्ञानमन्धकारश्च, अर्थान्-विवक्षितप्रमेयान् घटपटांश्च ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 अस्य ग्रन्थस्य काव्याङ्गतया काव्यफलैरेव फलवत्त्वमिति काव्यफलान्याह--  
     
@@ -75,8 +77,8 @@ title = "०१"
     
 चतुर्वर्गफलप्राप्तिहि कोव्यतो "रामादिवत्प्रवतितव्यं न रावणादिवत्" इत्यादिः कृत्याकृत्यप्रवृत्तिनिवृत्त्युपदेशद्वारेण सुप्रतीतैव ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ग) काव्याङ्गतयेति---काव्यविचारकत्वेन तदङ्गता ।  
@@ -119,7 +121,8 @@ title = "०१"
 नचाप्रमारसज्ञानं शुक्तौ रजतधीरिव ।  
 तस्मिन् न जायते बाधो यस्मादौत्तरकालिकः," ॥  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 उक्तं च (भामहेन)--  
     
@@ -131,8 +134,8 @@ title = "०१"
 कामप्राप्तिश्चार्थद्वारैव ।  
 मोक्षप्राप्तिश्चैतज्जन्यधर्मफलाननुसन्धानात्, मोक्षोपयोगिवाक्ये व्युत्पत्त्याधायकत्वाच्च ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, घ) कला वैदग्धी, वैचक्षण्यं प्रवर्त्तकं ज्ञानं प्रवृत्त्युपदेशात्, एतज्जन्यफलाननुसन्धानादिति--तत्र फलं काशीप्राप्तिर्योगाभ्यासश्च, व्युत्पत्त्याधायकत्वादितिकाव्यस्थसंस्कृतदर्शनाद् व्युत्पत्तेः ।  
@@ -145,13 +148,14 @@ title = "०१"
 मोक्षोपयोगिवाक्यं श्रुत्यादि ।  
 तत्र व्युत्पत्त्याधायकत्वं पदपदार्थसम्बन्धबोधकत्वात् ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 चतुर्वर्गप्राप्तिर्हि वेदशास्त्रेभ्यो नीरसतया दुःखादेव परिणतबुद्धीनामेव जायते ।  
 परमानन्दसदोहजनकतया सुखादेव सुकुमारबुद्धीनामपि पुनः काव्यादेव ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ङ) ननु चतुर्वर्गफलसाधके वेदशास्त्रे सति किमर्थं लोकः काव्ये प्रवर्त्ततामित्यत आह--चतुर्वर्गफलप्राप्तिरिति ।
@@ -163,7 +167,8 @@ title = "०१"
 सुकुमारमतयः सुखैकप्रवणाः राजपुत्रप्रभृतयः ।  
 परिणतबुद्धयः श्रुत्याद्यभ्यासब्धक्लेशाः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 ननु तहि परिणतबुद्धिभिः सत्सु वेदशास्त्रेषु किमिति काव्ये यत्नः करणीय इत्यपि न वक्तव्यम् ।  
 कटुकौषधोपशमनीयस्य रोगस्य सितशर्करोपशमनीयत्वे कस्य वा रोगिणः सितशर्कराप्रवृत्तिः साधीयसी न स्यात् ? किञ्च काव्यस्योपादेयत्वमग्निपुराणे ऽप्युक्तम्--  
@@ -180,8 +185,8 @@ title = "०१"
 तेन हेतुना तस्य काव्यस्य स्वरूपं निरूप्यते ।  
 एतेनाभिधेयं च प्रदर्शितम् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, च) एवं चाभिधेयं चेति ।  
@@ -193,19 +198,21 @@ title = "०१"
 नाट्यमभिनेयं नाटकादि ।  
 काव्यपरीक्षणं दिदर्शयिषुः प्राचीनकाव्यलक्षणेषु प्रमेयविरोधं दर्शयन्नाह--तत् किं स्वरूपमित्याह--"तददोषाविति" तदिति काव्यम्, दोषाः श्रुतिकट्वादयः, गुणा माधुर्य्यादयः, क्वाप्यनलङ्कृतीत्यनेन सर्वत्र सालङ्कारौ शब्दार्थौ काव्यम्, क्वचित्तु स्फुटालङ्कारविरहे ऽपि न काव्यत्वहानिरिति ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 तत्किंस्वरूपं तावत्काव्यमित्यपेक्षायां कश्चिदाह--  
 "तददोषौ शब्दार्थौ सगुणावनवालङ्कृती पुनः क्वपि" इति ।  
 एतच्चिन्त्यम् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, छ) कश्चिदिति काव्यप्रकाशकार इत्यर्थः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 तथाहि--  
 यदि दोषरहितस्यैव काव्यत्वाङ्गीकारस्तदा--  
@@ -213,8 +220,8 @@ title = "०१"
 धिग्धिक्छक्रजितं प्रबोधितवता किं कुम्भकर्णेन वा स्वर्गग्रामटिकाविलुण्ठनवृथोच्छूनैः किमेभिर्भुजैः" ॥  
 इति ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ज) न्यक्कारो ह्ययमेवेति--श्रीरामाक्रान्तलङ्कस्य रावणस्य विषादोक्तिरियम्, मे यदरयः अयमेव न्यक्कारः ।  
@@ -229,13 +236,14 @@ title = "०१"
 क्षुद्रो ग्रामो ग्रामटिका ।  
 विलुण्ठनं विधूननम् ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 अस्य शलोकस्य विधेयाविमर्शदोषदुष्टतया काव्यत्वं न स्यात् ।  
 प्रत्युत ध्वनि(स) त्वेनोत्तमकाव्यतास्याङ्गीकृता, तस्मादव्याप्तिर्लक्षणदोषः ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, झ) विधेयाविमर्शेति--विधेयस्य न्यक्कारस्योद्देश्यादरिमत्त्वात् पूर्वनिपातात् "अनुवाद्यमनुक्त्वैन विधेयमुदीरयेत्" इति नियमात् ।  
@@ -258,7 +266,8 @@ title = "०१"
 तस्मादव्याप्तिः ।  
 ध्वनिकारादिभिः ध्वनित्वेनोत्तमकाव्यत्वस्याङ्गीकारात् समनन्तरश्लेके तददोषविति लक्षणाव्यापनात् ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 ननु कश्चिदेवांशो ऽत्र दुष्टो न पुनः सर्वो ऽपीति चेत्, तर्हि यत्रांशे दोषः सो ऽकाव्यत्वप्रयोजकः, यत्र ध्वनिः स उत्तमकाव्यत्वप्रयोजक इत्यंशाभ्यामुभयत आकृष्यमाणमिदं काव्यमकाव्यं वा किमपि न स्यात् ।  
 न च कञ्चिदेवांशं काव्यस्य दूषयन्तः श्रतिदुष्टादयो दोषाः, किं तर्हि सर्वमेव काव्यम् ।  
@@ -266,8 +275,8 @@ title = "०१"
 काव्यात्मभूतस्य रसस्यानपकर्षकत्वे तेषां दोषत्वमपि नाङ्गीक्रियते ।  
 अन्यथा नित्यदोषानित्यदोषत्वव्यवस्थापि न स्यात् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ञ) स्वदत्तदोषं च स्वोद्भावितसिद्धान्तेन उद्धर्तुमाशङ्कते--नन्विति ।  
@@ -288,7 +297,8 @@ title = "०१"
 रसापकर्षकत्वे ऽप्यदोषत्वे, नित्यदोषाश्च्युतसंस्कृतप्रभृतयः, तेषां सकलरसापकर्षकत्वात्, अनित्यदोषाः श्रुतिकटुप्रभृतयः तथा हिरौद्रादिरसे प्ररूढश्रुतिकटुत्वस्य गुणत्वम्, यथा मम तातपादानां विजयनरसिंहे--- "निःश्वासोद्घातवातप्रसरधुतकुलाहार्य्यमुद्घृष्टदंष्ट्रा- जातज्योतिः स्फुलिङ्गप्रकरविरचितोल्कानिकायाभिशङ्काः ।  
 अर्द्धेपारीन्द्रमर्द्धेनरमहह महालोकमालोक्य लोकाः स्तोकास्तोकाविशेषाः शरणमुपययुर्वारिधिं वारिधिं वा" ॥  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 यदुक्तं धवनिकृता--  
 "श्रुतिदुष्टादयो दोषा अनित्या ये च दर्शिताः ।  
@@ -296,8 +306,8 @@ title = "०१"
 इति ।  
 किञ्च एवं काव्यं प्रविरलविषयं निर्विषयं वा स्यात्, सर्वथा निर्देषस्यैकान्तमसम्भवात् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ट) ध्वन्यात्मन्येवेति--ध्वनिकाव्यस्यात्मभूते शृङ्गारे इत्यर्थः ।  
@@ -311,12 +321,13 @@ title = "०१"
 ननूत्तमकाव्यत्वेनाङ्गीकृतानामपि सदोषत्वे काव्यत्वं माभूत् इत्याशङ्क्याह--किञ्चेति ।  
 एवम् अदोषशब्दर्थयोरेकवाक्यत्वे ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 नन्वीषदर्थे नञः प्रयोग इति चेत्तर्हि "ईषद्दोषौ शब्दार्थौ काव्यम्" इत्युक्ते निर्देषयोः काव्यत्वं न स्यात् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ठ) ईषदर्थे नञ इति---अदोषाविति नञ इत्यर्थः ।  
@@ -331,7 +342,8 @@ title = "०१"
 (लो, ऐ) नञः अदोषावितिपदस्थितस्य ।  
 निर्देषयोः क्वचित् कदाचित् कविनादोषभावेन निर्मितयोः काव्यत्वं न स्यात्, ईषद्दोषत्वकाव्यलक्षणस्य तत्रासम्भवात् ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 सति सम्भवे "ईषद्दोषौ" इति चेत् , एतदपि काव्यलक्षणो न वाच्यम् , रत्नादिलक्षणो कीटानुवेधादिपरिहारवत् ।  
 नही कीटानुवेधादयो रत्नस्य रत्नत्वं व्याहन्तुमीशाः किन्तूपादेयतारतम्यमेव कर्तुम् ।  
@@ -341,8 +353,8 @@ title = "०१"
 दुष्टेष्वपि मता यत्र रसाद्यनुगमः स्फुटः" ॥  
 इति ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ड) सति सम्भव इति---स्फुटदाषरहिते कदाचिदीषद्दोषस्य सम्भवे सतीत्यर्थः ।  
@@ -352,15 +364,16 @@ title = "०१"
     
 (ओ) कीटानुविद्धेति-साधारण्येन सामान्येन काव्यतादुष्टेष्वपि मतेति सम्बन्धः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 किञ्च ।  
 शब्दार्थयोः सगुणत्वविशेषणमुपपन्नम् ।  
 गुणानां रसैकधर्मत्वस्य "ये रसस्याङ्गिनो धर्माः शौर्यादय इवात्मनः" इत्यादिना तेनैव प्रतिपादितत्वात् ।  
 रसाभिव्यञ्जकत्वेनोपचारत उपपद्यत इति चेत् ? तथाप्ययुक्तम् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ढ) एवमदोषाविति विशेषणं दूषयित्वा सगुणाविति विशेषणं दूषयितुमाह--किञ्चेति ।  
@@ -379,14 +392,15 @@ title = "०१"
 मैवमित्याह--तथापीति ।  
 उपचारतः सगुणौ शब्दार्थौ काव्यमिति यदुच्यत इत्यर्थः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 तथाहि--  
 तयोः काव्यस्वरूपेणाभिमतयोः शब्दार्थयो रसो ऽस्ति, न वा ? नास्ति चेत्, गुणवत्त्वमपि नास्ति, गुणानां तदन्वयव्यतिरेकानुविधायित्वात् ।  
 अस्ति चेत् ? कथं नोक्तं रसवन्ताविति विशेषणम् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 लोचना:  
     
 (लो, अ) कुतो ऽयुक्तमित्याह--तथा हीति ।  
@@ -397,13 +411,14 @@ title = "०१"
 रसो ऽस्तीति प्रथमपक्षं दूषयति--अस्ति चेदिति ।  
 कथमिति--अयमाशयः, यदि गुणाभिव्यञ्जकयोः शब्दार्थयोः सतोरेव काव्यलक्षणत्वमाभिमतं तदा लक्षणस्य न्यूनपदत्वम् ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 गुणवत्त्वान्यथानुपपत्त्यैतल्लभ्यत इति चेत् ? तर्हि सरसावित्येव वक्तुं युक्तम् , न सगुणाविति ।  
 नहि प्राणिमन्तो देशाइति केनाप्युच्यते ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ण) चेत्तर्हेत्यत्र चेत्तथपीत्यर्थः ।  
@@ -431,12 +446,13 @@ title = "०१"
 एतच्च एतद्ग्रन्थकृता स्वकृतायां काव्यप्रकाशटीकायां लिखितमपि प्राचीनगौरवनियन्त्रितेनात्रोपेक्षितम् ।  
 अदोषत्वादीनां तु काव्यलक्षणत्वे प्रमेयार्थविरोधप्रसङ्ग इति तन्निराकृतम् ॥  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 ननु "शब्दार्थौ सगुणौ" इत्यनेनगुणाभिव्यञ्जकौ शब्दार्थौ काव्ये प्रयोज्यावित्यभिप्राय इति चेत् ? न, गुणाभिव्यञ्जकशब्दार्थवत्त्वस्य काव्ये उत्कषमात्राधायकत्वम् , न तु स्वरूपाधायकत्वम् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, त) इदानीं सगुणत्वविशेषणस्य न लक्षणघटकत्वं किन्तु कव्युपदेशपरत्वमित्याशङ्कते, ननु शब्दार्थाविति दूषयति---चेन्नेति ।  
@@ -445,7 +461,8 @@ title = "०१"
 ने चेदमयुक्तं दूषणं स्वरूपाधायकत्वस्योक्ताशङ्कायामविषयत्वात्, किन्तु कव्युपदेशपरतया एवाशङ्कितत्वादिति वाच्यम् ।  
 न तु स्वरूपाधायकत्वामित्यस्य स्वरूपे लक्षणे न निवेशौचित्यमित्येव, अर्थात् कव्युपदेशपरविशेषणस्य लक्षणे दानानौचित्यादित्यर्थः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 उक्तं हि--  
 "काव्यस्य शब्दार्थौ शरीरम् , रसादिश्चात्मा, गुणाः शौर्यादिवत्, दोषाः काणत्वादिवत्, रीतयो ऽवयवसंस्थानविशेषवत्, अलङ्काराः कटककुण्डलादिवत्" इति ।  
@@ -455,8 +472,8 @@ title = "०१"
 एतेन "वक्रोक्तिः काव्यजीवितम्" इति वक्रोक्तिजीवितकारोक्तमपि परास्तम् ।  
 वक्रोक्तेरलङ्काररूपत्वात् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, थ) शौर्य्यादिवदिति---रसस्योत्कर्षाधायका इति शेषः ।  
@@ -472,7 +489,8 @@ title = "०१"
 तथा ह्युक्तम्--- "सैषा सर्वत्र वक्रोक्तिरनयार्थो विभाव्यते ।  
 यत्नो ऽस्यां कविना कार्य्यः को ऽलङ्कारो ऽनया विना"इति ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 यच्च क्वचिदस्फुटालङ्कारत्वे उदाहृतम्--  
 यः कौमारहरः स एव हि वरस्ता एव चैत्रक्षपा- स्ते चोन्मीलितमालतीसुरभयः प्रौढाः कदम्बानिलाः ।  
@@ -480,8 +498,8 @@ title = "०१"
 इति ।  
 एतच्चिन्त्यम् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, द) "यः कौमारहरऽ; इत्यादिश्लोकम् अस्फुटालङ्कारोदाहरणतया काव्यप्रकाशकार उदाहृतवान्, तत्र स्फुटालङ्कार एवास्तीत्याह---यच्चेति ।  
@@ -512,12 +530,13 @@ title = "०१"
 कदम्बो धूलिकदम्ब इति केचित् ।  
 सम्प्रदायविदस्तु स एव वसन्तः ता एव वर्षा इति मन्मथोद्दीपकत्वाविशेषाद् ऋतुद्वयस्यापि ग्रह इति व्याचक्षते ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 अत्र हि विभावनाविशेषोक्तमूलस्य सन्देहसङ्करालङ्कारस्यस्फुटत्वम् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ध) विभावनेति---उत्कण्ठाकारणाभावे ऽपि उत्कण्ठावर्णना विभावना ।  
@@ -545,15 +564,16 @@ title = "०१"
 तत्राह---अत्रहीति, अयमर्थः--अत्र विभावनाविशेषोक्ती अस्फुटे, तथापि तदुभयारब्धसन्देहे सङ्करालङ्कारस्य स्फुटत्वात् कथं स्फुटालङ्कारविरह इति ।  
 संसृष्टि सङ्करौ च लौकिकमुकुटाद्यलङ्कारमिश्रणेनेव पृथगलङ्कारत्वेनाभ्युपगतौ ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 एतेन--  
 "अदोषं गुणवत्काव्यमलङ्कारैरलङ्कृतम् ।  
 रसान्वितं कविः कुर्वन् कीर्तिं प्रीतिं च विन्दति" ॥  
 इत्यादीनामपि काव्यलक्षणत्वमपास्तम् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, न) एतेनेति--अस्मदुक्तदूषणेनेत्यर्थः ।
@@ -564,14 +584,15 @@ title = "०१"
 अदोषभित्यादि सरस्वतीकण्ठाभरणोक्तलक्षण्म् ।  
 विशेषश्चात्र सरसाविति वचने श्रुत्यर्थत्वेन सगुणाविति वचनं समनन्तरोक्तरीत्यानर्थकम् ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 यत्तु ध्वनिकारेणोक्तम्--  
 "काव्यस्यात्मा ध्वनिः"-- इति तत्किं वस्त्वलङ्काररसादिलक्षणास्तिरूपो ध्वनिः काव्यस्यात्मा, उत रसादिरूपमात्रो वा ? नाद्यः,-प्रहेलिकादावतिव्याप्तेः ।  
 द्वितीयश्चेदोमिति ब्रूमः ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, प) ध्वनिरितीति---व्यङ्ग्यार्थ इत्यर्थः ।  
@@ -601,24 +622,26 @@ title = "०१"
 तथा हि--दाराणां भार्य्याणां पोषणे रताः के ? शीतम्बुवाहिनी गङ्गा का ? कं कृष्णः सञ्जघान ? बलवन्तं कं न बाधते शीतम् ? इति प्रश्नः ।  
 उत्तरपक्षे केदाराः क्षेत्राणि ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 ननु यदि रसादिरूपमात्रो ध्वनिः काव्यस्यात्मा, 
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, फ) ननु यदि व्यङ्ग्यो रस एव काव्यस्यात्मा तदा वस्तुनो व्यङ्ग्यत्वे कथं काव्यत्वमित्याशङ्कते "ननु रसादिमात्रेति" ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 तदा--  
 अत्ता एत्थ णिमज्जै एत्थ अहं दिअसअं पलोएहि ।  
 मा पहिअ रत्तिअन्धिअ सेज्जाए मह णिमज्जहिसि ॥
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ब) अत्ता एत्थेति--- "श्वश्रूरत्र निमज्जति अत्राहं दिवसकं प्रलोकय ।  
@@ -636,12 +659,13 @@ title = "०१"
 रसाभासश्चात्र पुंश्चल्याः परनायकविषयाया रतेः प्रकाशनात् ।  
 अथवा नरिसेष्वपि वस्तुमात्रप्राधान्येन काव्यव्यवहारस्वीकारः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 इत्यादौ वस्तुमात्रस्य व्यङ्ग्यत्वे कथं काव्यव्यवहार इति चेत् ? न,-अत्रापि रसाभासवत्तैवेति ब्रूमः,
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, भ) वस्तुमात्रस्य व्यङ्ग्यत्व इति ।  
@@ -651,14 +675,15 @@ title = "०१"
 व्यङ्ग्यान्तरसत्त्वे ऽपि रसपर्य्यवसान एव काव्यत्वम् ।  
 तथात्वाभावे काव्यत्वस्वीकारे त्वतिव्याप्तिरित्याह---अन्यथेति ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 अन्यथा "देवदत्तो ग्रामं याति" इति वाक्ये तद्भृत्यस्य तदनुसरणरूपव्यङ्ग्यावगतेरपि काव्यत्वं स्यात् ।  
 अस्त्विति चेत् ? न, रसवत एव काव्यत्वाङ्गीकारात् ।  
 काव्यस्य प्रयोजनं हि रसास्वादसुखपिण्डदानद्वारा वेदशास्त्रविमुखानां सुकुमारमतीनां राजपुत्रादीनां विनेयानां "रामादिवत्प्रवर्तितव्यं न रावणादिवत्" इत्यादिकृकत्याकृत्यप्रवृत्तिनिवृत्त्युपदेश इति चिरन्तनैरप्युक्तत्वात् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, म) रसवत एव काव्यत्वाङ्गीकारे बीजमाह--काव्यस्य प्रयोजनमिति ।  
@@ -672,15 +697,16 @@ title = "०१"
 ग्रथमालीढमधवः पिबन्ति कटु भेषजम्" ॥  
 इति ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 तथा चाग्नेयपुराणो ऽप्युक्तम्--  
 "वाग्वैदग्ध्यप्रधाने ऽपि रस एवात्र जीवितम्" इति ।  
 व्यक्तिविवेककारेणाप्युक्तम्--  
 "काव्यस्यात्मनि अङ्गिनि, रसादिरूपे न कस्यचिद्विमतिः" इति ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (लो, ए) व्यक्तिविवेककारो हि महिमाचार्य्यः ।  
@@ -691,7 +717,8 @@ title = "०१"
 सिद्धान्तमाह--प्रबन्धरसो महाकाव्यम् ।  
 रीतिः पदसङ्घटना, अवयवाः पदानि ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 ध्वनिकारेणाप्युक्तम्--  
 "नहि कवेरितवृत्तमात्रनिर्वाहेणात्मपदलाभः, इतिहासादेरेव तत्सिद्धेः" इत्यादि ।  
@@ -701,8 +728,8 @@ title = "०१"
 "रीतिरात्मा काव्यस्य" इति, तन्न; रीतेः सङ्घटनाविशेषत्वात् ।  
 सङ्घटनायाश्चावयवसंस्थानरूपत्वात्, आत्मनश्च तद्भिन्नत्वात् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, य) वाग्वैदग्ध्यमलङ्कारः ।  
@@ -711,7 +738,8 @@ title = "०१"
 गुणक्रियेति ।  
 यद्यपि वर्णो गुणस्यैव व्यञ्जको न क्रियायास्तथापि अत्र वर्णपदं वर्णादिपरं बोध्यम् ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 यच्च ध्वनिकारेणोक्तम्--  
 "अर्थः सहृदयश्लाघ्यः काव्यात्मा यो व्यवस्थितः ।  
@@ -719,8 +747,8 @@ title = "०१"
 इति ।  
 अत्र वाच्यात्मत्वं "काव्यस्यात्माध्वनिः-" इति स्ववचनविरोधादेवापास्तम् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, र) नच्यप्रतीयमानाविति ।  
@@ -729,7 +757,8 @@ title = "०१"
 ध्वनिर्व्यङ्ग्यार्थः ।  
 तस्यात्मकत्वकथनवाच्यार्थात्मकथनरूपयोः स्ववचनयोर्विरोधादित्यर्थः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 तत्किं पुनः काव्यमित्युच्यते--  
     
@@ -740,8 +769,8 @@ title = "०१"
 तेन विना तस्य काव्यत्वानङ्गीकारात् ।  
 "रस्यते इति रसः" इति व्युत्पत्तियोगाद्भावतदाभासादयो ऽपि गृह्यन्ते तत्र रसो यथा--
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ल) तत् किं पुनः काव्यमित्यादिप्रश्रः ।  
@@ -757,13 +786,14 @@ title = "०१"
 कर्मकर्त्तरि, वा प्रयोगादिति वक्ष्यते ।  
 तदाभासाः रसाभासा भावाभासाश्च आदिशब्दात् भावस्य शान्तिरुदयः सन्धिः शबलता च ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 शून्यं वासगृहं विलोक्य शयनादुत्थाय किञ्चिच्छनैर्निद्राव्याजमुपागतस्य सुचिरं निर्वर्ण्य पत्युर्मुखम् ।  
 विस्त्रब्धं परिचुम्ब्य जातपुलकामालोक्य गण्डस्थलीं लज्जानम्रमुखी प्रियेण इसता बाला चिरं चुम्बिता ॥
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, व) शून्यं वासगृहमित्यादि ।  
@@ -797,7 +827,8 @@ title = "०१"
 एभिश्च साधारण्येनाभिव्यक्तः सामाजिकरतिभावः शृङ्गारसरूपतां भजते ।  
 एवं वक्ष्यमाणोदाहरणोष्वपि विभावादिविवेको बोद्धव्यः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 अत्र हि सम्भोगश्र्टङ्गाराख्यो रसः ।  
 भावो यथा महापात्रराघवानन्दसान्धिविग्रहिकाणाम्--  
@@ -805,8 +836,8 @@ title = "०१"
 क्रोधे क्षअगणः, शरे दशमुखः, पाणौ प्रलम्बासुरो, ध्याने विश्वमसावधार्मिककुलम्, कस्मैचिदस्मै नमः" ॥  
 अत्र भगवद्विषयारतिर्भावः ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, श) यस्यालीयत इति ।  
@@ -831,14 +862,15 @@ title = "०१"
 पृष्टदेशे जगन्मण्डलमलीयतेति कूर्मः, एवं वराहादयः ।  
 कस्मैचिद् विशेषतो निर्द्देष्टुमशक्यत्वात् ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 रसाभासो यथा--  
 मधु द्विरेफः कुसुमैकणत्रे पपौ प्रियां स्वामनुवर्तमानः ।  
 शृङ्गेण च स्पर्शनिमीलिताक्षीं मृगीमकण्डूयत कृष्णसारः ॥
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ष) मधुद्विरेफ इति---महेशतपोभङ्गायाऽकालिके वसन्ते जाते तिरश्चामपि मान्मथक्रियावर्णनमिदम् ।  
@@ -851,20 +883,22 @@ title = "०१"
     
 (लो, अ) कुसुमरूपे एकस्मिन् पात्रे ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 अत्र स्म्बोगशृङ्गारस्य तिर्यग्विषयत्वाद्रसाभासः ।  
 एवमन्यत् ।  
 दोषाः पुनः काव्ये किंस्वरूपा ? 
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (लो, आ) दोषाः पुनरिति---येषां सद्भावेन काव्यत्वं खणिडतमित्यर्थः ।  
 किं स्वरूपाः किमाकारेण वर्त्तन्ते इति पूर्ववद् व्याख्यानम् ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 इत्युच्यन्ते--  
     
@@ -877,8 +911,8 @@ title = "०१"
     
 गुणाः शौर्यादिवत्, अलङ्काराः कटककुण्डलादिवत्, रीतयो ऽवयवसंस्थानविशेषवत्, देहद्वारेणोव शब्दार्थद्वारेण तस्यैव काव्यस्यात्मभूतं रसमुत्कर्षयन्तः काव्यस्योत्कर्षका इत्युच्यन्ते ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
 (वि, स) श्रुतीति---श्रुतिदुष्टादयः अपुष्टत्वादयोर्ऽथदोषाः ।  
 एते च शब्दार्थद्वारेण रसमपकषर्यन्त इत्यन्वयः ।  
@@ -887,14 +921,15 @@ title = "०१"
 तद्धेतुता च शब्दार्थद्वारेण इति व्याख्यास्यते ।  
 शब्दार्थावुत्कुष्य रसमुत्कर्षयन्तीत्यर्थः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 इह यद्यपि गुणानां रसधर्मत्वं तथापिगुणशब्दो ऽत्र गुणाभिव्यञ्जकशब्दार्थयोरुपचर्यते ।  
 अतश्च "गुणाभिञ्जकाः शब्दा रसस्योत्कर्षकाः" इत्युक्तं भवतीति प्रागेवोक्तम् ।  
 एषामपि विशेषोदाहरणानि वक्षयामः ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ह) ननु शब्दार्थद्वारेण रसोत्कर्षकत्वमलङ्काररीतीनां शब्दार्थधर्माणामेव सम्भवति रसमात्रधर्माणामेव गुणानां कथं तद्द्वारकत्वं व्याख्यातमित्यत आह---इहेति ।  
@@ -917,7 +952,8 @@ title = "०१"
 तद्व्याक्तिहेतू शब्दार्थवाश्रित्यौजो व्यवस्थितम्" ॥  
 इति सर्वमतावदातम् ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 इति श्रीमन्नारायणचरणारबिन्धमधुव्रत- साहत्यार्णवकर्णधार-ध्वनिप्रस्थापन-परमाचार्यकविसूक्तिरत्नाकराष्टादशभाषा-वारविलासिनीभुजङ्ग-सान्धिविग्रहिक-महापात्र-श्रीविश्वनाथ-कविराजकृतौ साहित्यदर्पणो काव्यस्वरूपनिरूपणो नाम प्रथमः परिच्छेदः ।  
     
