--- a/laxaNam/prastutiH/vishvanAtha-sAhitya-darpaNaH/05.md
+++ b/laxaNam/prastutiH/vishvanAtha-sAhitya-darpaNaH/05.md
@@ -6,8 +6,8 @@ title = "०५"
 
 अथ केयमभिनवा व्यञ्जना नाम वृत्तिरित्युच्यते---
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, क) व्यङ्ग्यभेदात् काव्यभेदस्य उक्तत्वाद् व्यङ्ग्यस्य च व्यञ्जनावृत्तिगम्यत्वाद् व्यञ्जनां पृच्छति---अथ केयमिति ।  
@@ -21,13 +21,14 @@ title = "०५"
 इयं समनन्तरोक्ता काव्यभेदद्वयस्य साधिका ।  
 अभिनावा---अशिलशास्त्रार्थतत्त्ववेदिनः काव्यपुरुषस्यावतारात् श्रीमदानन्दवर्धनाचार्यात् प्राचीनैराचार्यैरप्रदर्शिता ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 वृत्तीनां विश्रान्तेरभिधातत्पर्यलक्षणाख्यानाम् ।  
 अङ्गीकार्या तुर्या वृत्तिर्बोधे रसादीनाम् ॥ विस्स्द्_५।१ ॥
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ख) वृत्तीनामिति---अभिधालक्षणातात्पर्याख्यानां तिसृणां वृत्तीनाम् ।  
@@ -41,7 +42,8 @@ title = "०५"
 आदिशब्देन वस्त्वलङ्कारयोः ।  
 रसस्य प्राधान्यात् प्रथमं निर्देशः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 अभिधायाः सङ्केतितार्थमात्रबोधनविरताया न वस्त्वलङ्काररसादिव्यङ्ग्यबोधने क्षमत्वम् ।  
 न च सङ्केतितो रसादिः ।  
@@ -50,8 +52,8 @@ title = "०५"
 क्वचिच्च "शृङ्गाररसो ऽयम्" इत्यादौ स्वशब्देनाभिधाने ऽपि न तत्प्रतीतिः, तस्य स्वप्रकाशानन्दरूपत्वात् ।  
 अभिहितान्वयवादिभिरङ्गीकृता तात्पर्याख्या वृत्तिरपि संसर्गमात्रे परिक्षीणा न व्यङ्घ्यबोधिनी ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ग) व्याचष्टे---अभिधाया इति ।  
@@ -74,12 +76,13 @@ title = "०५"
 "शृङ्गारः सखि ! मूर्तिमानिव मधौ मुग्धो हरिः कीडती"त्यादौ च विभावादिसामग्रयादेव तद्व्यञ्जकत्वम् न तु शृङ्गारादिशब्दस्य ।  
 संसर्गमात्रेण प्रत्येकं पदैरभिहितान्नामर्थानामित्यर्थः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 यच्च केचिदाहुः---"सो ऽयमिषोरिव दीर्घदीर्घतरो ऽभिधाव्यापरः" इति ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, घ) उभयसिद्धवाच्यार्थस्य बोधिका शक्तिरूपा वृत्तिरेव व्यङ्ग्यबोधिका, यथा धनुर्धरमुक्तेन इषुणा प्रतिसंहितमेकं लक्ष्यं दीर्घेण वेगरूपव्यापारेण भित्त्वा अप्रतिसंहितं लक्ष्यान्तरमपि दीर्गतरीभूतेन तेनैव वेगरूपव्यापारेण भिद्यत इति यत् केषाञ्चिमतम्, यच्च तात्पर्यवृत्तिरेव व्यङ्ग्यबोधिका इति ध्वनिकस्य मतम्, दूषयितुं कदुभयमुत्थापयति---यच्च केचिद् इति ।  
@@ -90,15 +93,16 @@ title = "०५"
 (लो, ई) यच्चेति ।  
 अयमर्थः--यथा खलु धनुष्मता मुक्तो बाण एकेनैव वेगरूपव्यापारेण शत्रोः कवचादिकमनेकं भिनत्ति, तथैक एव शब्दस्य व्यापारो यावदुद्देश्यं बोधयति ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 यच्चधनिकेनोक्तम्---  
 "तात्पर्याव्यतिरेकाच्च व्यञ्जकत्वस्य न ध्वनिः ।  
 यावत्कार्यप्रसारित्वात्तात्पर्यं न तुलाधृतम्" ॥  
 इति ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ङ) यच्च ध्वनिकेति---तात्पर्यव्यतिरेकादिति---व्यञ्जकत्वस्य व्यञ्जनायास्तात्पर्याततिरिक्तत्वाद् असौ नं ध्वनिर्न व्यञ्जना, किन्तु तात्पर्यमेवेत्यर्थः ।  
@@ -110,12 +114,13 @@ title = "०५"
 तात्पर्यकार्यमुद्देश्यम्, यदर्थं शब्दप्रयोग इति भावः ।  
 न तुलया धृतम्; क्वचिन्निरूद्धप्रसरीकृत्य वाक्यार्थबोधनमात्रे व्यवस्थापितम् ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 तयोरुपरि "शब्दबुद्धिकर्मणां विरम्य व्यापाराभावः" इति वादिभिरेव पातनीयो दण्डः ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, च) तयोरुपरीति ।  
@@ -135,12 +140,13 @@ title = "०५"
 (लो, ऊ) विरम्य व्यापाराभाववादिभिः--अभिहितान्वयवादिभिः ।  
 किमस्माकमार्द्रकवणिजां वहित्रचिन्तया इत्यर्थः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 एवं च किमिति लक्षणापुयपास्या ? दीर्घदीर्घतराभिधाव्यापारेणापि तदर्थबोधसिद्धेः ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, छ) अभिधारूपाया वाच्यार्थबोधकवृत्तेर्व्यङ्ग्यबोधकत्वे दोषान्तरमाह--एचञ्चेति ।
@@ -151,11 +157,13 @@ title = "०५"
 "लक्षणाऽ; इत्यनन्तरं पृथगिति शेषः ।  
 तदर्थो लक्षणीयः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 किमिति च "ब्राह्मण ! पुत्रस्ते जातः, कन्या ते गर्भिणी" इत्यादावपि हर्षशोकादीनामपि न वाच्यत्वम् ।
 
-************* चोम्मेन्तर्य् *************  
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ज) ननु न अङ्गीकार्यैव लक्षणा इत्यत आह---किमिति चेति ।  
@@ -168,14 +176,15 @@ title = "०५"
 अयमर्थः--हर्षादयो हि न केनापि वाच्यत्वेनाभ्युपगम्यन्ते, यतो ऽमी वाच्यार्थप्रतीत्या न कियन्ते ।  
 न खलु शब्दस्य कारकत्वम्, ज्ञापकत्वात्तस्य ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 यत्पुनरूक्तं "पौरुषेयमपौरुषेयं च वाक्यं सर्वमेव कार्यपरम्, अतत्परत्वे ऽनुपादेयत्वादुन्मत्तवाक्यवत् ।  
 ततश्च काव्यशब्दानां निरतिशयसुखास्वादव्यतिरेकेण प्रतिपाद्यप्रतिपादकयोः प्रवृत्त्यौपयिकप्रयोजनानुपलब्धेर्निरतिशयमुखास्वाद एव कार्यत्वेनावधार्यते ।  
 "यत्परः शब्दः स शब्दार्थः" इति न्यायात्" इति ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, झ) यत्परः शब्दः स शब्दार्थः "इति जैमिनिवाक्यमेव व्यङ्ग्यबोधने तात्पर्याख्यवृत्तौ प्रमाणमिति मतं दूषयितुमुत्थापयति---यत्पुनरिति ।  
@@ -203,14 +212,15 @@ title = "०५"
 तस्मान्निरतिशयसुखास्वादरूपो रसादिरूपोर्ऽथः शब्दस्य तात्पर्यविषयो जातः किं वृत्त्यन्तरकल्पनयेति ।  
 यत्पसे यदुद्देश्यप्रयुक्तः; स शब्दार्थः शब्देनावश्यं बोद्धव्यः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 तत्र प्रष्टव्यम्-किमिदं तत्परत्वं नाम, तदर्थत्वं वा, तात्पर्यवृत्त्या तद्वोधकत्वं वा ? आद्ये न विवादः, व्यङ्ग्यत्वे ऽपि तदर्थतानपायात् ।  
 द्वितीये तु--केयं तात्पर्याख्या वृत्तिः, अभिहितान्वयवादिभिरङ्गीकृता, तदन्या वा ? आद्ये दत्तमेवोत्तरम् ।  
 द्वितीये तु---नाममात्रे विवादः, तन्मते ऽपि तुरीयवृत्तिसिद्धेः ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि ञ) स्वयं कल्पितार्थे वितर्कयति---तत्र प्रष्टव्यमिति ।  
@@ -228,14 +238,15 @@ title = "०५"
 तदर्थत्वं तस्य शब्दस्यार्थत्वम् ।  
 दत्तमेवोत्तरं तयोरुपरीत्यादिना ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 नन्वस्तु युगपदेव तात्पर्यशक्त्या विभावादिसंसर्गस्य रसादेश्च प्रकाशनम्-इति चेत् ? न, तयोर्हेतुफलभावाङ्गीकारात् ।  
 यदाह मुनिः--"विभावानुभावव्यभिचारिसंयोगद्रसनिष्पत्तिः" इति ।  
 सहभावे च कुतः सव्येतरविषाणयोरवि कार्यकारणभावः ? पौर्वापर्यविपर्ययात् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ट) ननु अतिरिक्तपदार्थरूपा तुरीया वूत्तिर्ध्वनिकेन नोच्यते, किन्तु कॢप्ततात्पर्यमेव व्यङ्ग्यबोधकम् ।  
@@ -256,13 +267,14 @@ title = "०५"
 ऽ; इत्यादौ, "रात्रौ भुङ्क्तेऽ; इत्यादिवदत्रापि व्यङ्ग्यार्थप्रतीतौ वाक्यशेषं कल्पतामिति चेन्न ।  
 "धर्मिकल्पनातो वरं धर्मकल्पना"इति न्यायाद् व्यापारन्तरकल्पनस्यैव न्याय्यत्वात् ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 "गङ्गायां घोषः" इत्यादौ तटाद्यर्थमात्रबोधविरताया लक्षणायाश्च कुतः शीतत्वपावनत्वादिव्यङ्ग्यबोधकता ।  
 तेन तुरीया वृत्तिरुपास्यैवेति निर्विवादमेतत् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ठ) ननु लक्षणामूलव्यञ्जना नाद्रियताम्, एकयैव लक्षणया लक्षयव्यङ्ग्यार्थद्वयं बोध्यतामित्यत आह---गङ्गायामिति ।
@@ -273,15 +285,16 @@ title = "०५"
 उपसंहरति---तेनेति ।  
 तेन हेतुना ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 किञ्च---  
     
 बोद्धृस्वरूपसङ्ख्यानिमित्तकार्यप्रतीतिकालानाम् ।  
 आश्रयविषयादीनां भेदाद्भिन्नो ऽभिधेयतो व्यङ्ग्यः ॥ विस्स्द्_५।२ ॥
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ड) ननु अभिधा लक्षणा च दीर्घतरीभूतैव व्यङ्ग्यार्थं बोधयतु, कुतस्तयोर्विरामः? शब्दस्य विरम्यव्यापारस्तु भवन्मते व्यङ्ग्यबोधन इव स्वीकार्य इत्यतो वैधर्म्यादेव वाच्यव्यङ्ग्यबोधकव्यापारयोर्भेदं साधयति ।  
@@ -295,24 +308,26 @@ title = "०५"
 भेदादित्यस्य बोद्ध्रित्यादौ प्रत्येकमन्वयः ।  
 तेन बोद्धृभेदात्, स्वरूपभेदात्, सङ्ख्याभेदादित्यादि बोद्धव्यम् ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 वाच्यार्थव्यङ्ग्यार्थयोर्हि पदतदर्थमात्रज्ञाननिपुणैर्वैयाकरणैरपि सहृदयैरेव च संवेद्यतया बोद्धृभेदः ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ढ) तत्र बोद्धृभेदं दर्शयति---वाच्यार्थव्यङ्ग्यार्थयोरिति ।  
 वाच्यार्थस्य वैयाकरणैर्वेद्यतया, व्यङ्ग्यार्थस्य च सहृदयैरित्येवं यथासङ्ख्यमन्वयः ।  
 वैयाकरण हि पदस्य पदवाच्यार्थस्य ज्ञानमात्रे निपुणाः, न तु व्यङ्ग्यार्थज्ञाने ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 "भम धम्मिअ--" (२४२ पृ।) इत्यादौ क्वचिद्वाच्ये विधिरूपे निषधरूपतया, क्वचित् "निः शेषच्युतचन्दनम्-" (६२ पृ।) इत्यादौ निषेधरूपे विधिरूपतया च स्वरूपभेदः ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ण) स्वरूपभेदं दर्शयति---भमेति ।  
@@ -327,7 +342,8 @@ title = "०५"
     
 (लो, अ) "निः शेषच्युतचन्तनम् ऽ; इत्यादौ "गतासीत्"इत्यर्थस्य व्यङ्ग्यत्वमङ्गीकृत्य विधिरूपत्वोक्तिः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 "गतो ऽस्तकर्कः" इत्यादौ च वाच्योर्ऽथ एक एव प्रतीयते ।  
 व्यङ्ग्यस्तु तद्वोद्ध्रादिभेतात् क्वचित् "कान्तमभिसर" इति, "गावो निरुध्यन्ताम्" इति, "नायकस्यायमागमनावसरः" इति, "सन्तापो ऽधुना नास्ति" इत्यादिरूपेणानेक इति सङ्ख्याभेदः ।  
@@ -341,22 +357,23 @@ title = "०५"
 वाच्यार्थः शब्दोच्चारणमात्रेण वेद्यः, एष तु तथाविधप्रतिभानैर्मल्यादिनेति निमित्तभेदः ।  
 प्रतीतिमात्रकरणाच्चमत्कारकरणाच्च कार्यभेदः ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, त) सङ्ख्याभेदं दर्शयति---वाच्यार्ऽथः इति ।  
 एष इति---व्यङ्ग्यैत्यर्थः ।  
 कार्यभदं दर्शयति---प्रतीतिमात्रेति---अभिधाया अभिधेयप्रतीतिमात्रं कार्यम्, व्यञ्जनायास्तु चमत्कारो ऽपि कार्यम् ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 केवलरूपतया चमत्कारितया च प्रतीतिभेदः ।  
 पूर्वपश्चाद्भावेन च कालभेदः ।  
 शब्दाश्रयत्वेन शब्दतदेकदेशतदर्थवर्णसङ्घटनाश्रयत्वेन चाश्रयभेदः ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, थ) कालभेदं दर्शयति---पूर्वपश्चादिति ।  
@@ -364,15 +381,16 @@ title = "०५"
 अभिधायाः शब्दमात्रामाश्रयः ।  
 व्यञ्जनायास्तु शब्दतदेकदेशवर्णादिः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 "कस्स व ण होइ रोसो दट्ठूणपिआएं सव्वणं अहरं ।  
 सब्भमरपडमग्घाइणि वारिअवामे सहसु एङ्णिम्" ॥  
 इति सखीतत्कान्तविषयत्वेन विषयभेदः ।  
 तस्मान्नाभिधेय एव व्यङ्ग्यः ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, द) विषयभेदं दर्शयति---"कस्स वा ण होइऽ; इति ।  
@@ -399,7 +417,8 @@ title = "०५"
 इह च यद्यपि वाक्यार्थस्य प्रतीत्यनन्तरं तस्य सत्यासत्यत्वजिज्ञासायां सत्यत्वं प्रमाणान्तरेणानुमानेनैव बोध्यते, तथापि सत्यासत्यत्वजिज्ञासातः पूर्वमुपपन्नाया वाक्यार्थप्रमाया अप्रमाभावात् शब्दैकसमधिगम्यत्वाच्च न शब्दप्रामाण्यव्याकोपः ।  
 न हि चक्षुरादिना प्रतीतौ सत्यासत्यत्वप्रत्यक्षप्रामाण्यं व्याकुप्येत ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 तथा---
 
@@ -415,8 +434,8 @@ title = "०५"
     
 "न बोधिका" इति शेषः ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ध) रसादिबोधिका न लक्षणा नापि अभिधा सम्भवतीत्याह--प्रागसत्त्वादिति ।  
@@ -435,13 +454,14 @@ title = "०५"
 त्रयाणामपि व्यङ्ग्यानां मुख्यार्थबाधविरहादपि न लक्षणा बोधिकेति ।  
 अपिः पूर्वोक्तसमुच्चये ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 नहि को ऽपि रसनात्मकव्यापारद्भिन्नो रसादिपदप्रतिपाद्यः प्रमाणसिद्धो ऽस्ति, यमिमे लक्षणाभिधे बोधयेताम् ।  
 किञ्ञ्च, यत्र"गङ्गायां घोषः" इत्यादावुपात्तशब्दार्थानां बुभूषन्नेवान्वयो ऽनुपपत्त्या बाध्यते तत्रैव हि लक्षणायाः प्रवेशः ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, न) ननु रसे ऽपि तात्पर्यसत्त्वाल्लक्षणां विना तदनिर्वाह एव मुख्यार्थबाध उच्यत इत्यत आह--न हीति ।  
@@ -454,14 +474,15 @@ title = "०५"
     
 (लो, ऊ) प्रमाणासिद्ध इत्यनन्तरम्, "क्वचिद्"इति शेषः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 यदुक्तं न्यायकुसुमाञ्जलावुदयनाचार्यैः---  
 "श्रुतान्वयादनाकाङ्क्षं न वाक्यं ह्यन्यदिच्छति ।  
 पदार्थान्वयवैधुर्यात्तदाक्षिप्तेन सङ्गतिः" ॥
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, प) अस्मिन्नर्थे संवादं दर्शयति---तदुक्त्म् इति ।  
@@ -477,12 +498,13 @@ title = "०५"
 नेच्छति नापेक्षते ।  
 यदि तु "गङ्गायां घोषःऽ; इत्यादौ पदार्थानामन्वयकाल एव बाधप्रतिभासाद्यन्वयस्य विधुरीभावस्तदा तेन पदार्थेन जलमयादिना आक्षिप्तो यस्तटादिस्तेन सङ्गतिरन्वय इत्यर्थः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 न पुनः "शून्यं वासगृहम्--" इत्यादौ (२२ पृ।) मुखायाथबाधः ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, फ) एवम्, "शून्यं वासगृहम्ऽ; ।  
@@ -493,13 +515,14 @@ title = "०५"
 (लो, ॠ) ततः किमित्यत आह---न पुनरिति ।  
 तत्कथं रसादिप्रतीतौ लक्षणा इत्यर्थः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 यदि च "गङ्गायां घोषः" इत्यादौ प्रयोजनं लक्ष्यं स्यात्, तीरस्य मुख्यार्थत्वं बाधितत्वं च स्यात् ।  
 तस्यापि च लक्ष्यतया प्रयोजनान्तरं तस्यापि प्रयोजनान्तरमित्यनवस्थापातः ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ब) नन्वेवं रसबोधनार्थमेव व्यञ्जना स्वीक्रियताम्; "गङ्गायां घोषःऽ; इत्यादौ यत् शैत्यपावनत्वं च व्यङ्ग्यमुक्तं तीरलक्षणानन्तरं तत्रापि लक्षणैवास्तु; किं व्यञ्जनया ? इत्याह---यदि चेति ।  
@@ -520,14 +543,15 @@ title = "०५"
 "अनवस्था या मूलक्षतिकारिणी"मूलं ह्यत्र तीरनिष्टस्य पावनत्वस्य च पूर्वपक्षेण लक्ष्यत्वेनाङ्गीकारः ।  
 तस्येवंविधानर्थमूलत्वेन परित्यागो न्याय्य इति भावः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 न चापि प्रयोजनविशिष्ट एव तीरे लक्षणा ।  
 विषयप्रयोजनयोर्युगपत्प्रतीत्यनभ्युपगमात् ।  
 नीलादिसंवेदनानन्तरमेव हि ज्ञातताया अनुव्यवसायस्य वा सम्भवः ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, भ) ननु लक्ष्यार्थबोधानन्तरं यदि प्रयोजने लक्षणा तदैवानवस्था; शीतपावने तीरे घोष इत्येवं प्रयोजनविशिष्ट एव लक्षणास्त्वित्यत आह---न चापीति ।  
@@ -545,13 +569,14 @@ title = "०५"
 (लो, ए) ननु यदि तटाद्यर्थबोधनाय लक्षणावृत्तिराश्रयणीया, इह चैतद्विशिष्टमेव तटं लक्षणा बोधयतु किं वृत्त्यन्तरेण ? तथा हि गङ्गातादात्म्येन तटप्रत्ययस्तावल्लक्ष्यः, गङ्गातादात्म्यप्रतीत्या च तटस्य दैवसिद्धमेव शैत्यादिविशिष्टत्वमित्याशङ्क्याह--न चापीति---प्रयोजनविशिष्टे ऽपि लक्षणैत्यर्थः ।  
 कुतः ? इत्याह---  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 नानुमानं रसादीनां व्यङ्ग्यानां बोधनक्षमम् ।  
 आभासत्वेन हेतूनां स्मृतिर्न च रसादिधीः ॥ विस्स्द्_५।४ ॥
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, म) व्यक्तिविवेककारमते विभावादिभ्यो रत्याद्यनुमितिरेव रस; न रत्यादीनां व्यञ्जना--इति; तद्दूषयति--नानुमानम् इति ।  
@@ -572,15 +597,16 @@ title = "०५"
     
 (लो, ऐ) एवं व्यङ्ग्यस्यास्य प्राचीनवेद्यत्वं निरस्य महिमभट्टेन खलु रसवस्त्वलङ्कारव्यञ्जकानां वाक्यानामन्तर्भावार्थं यदनुमानं दर्शितं तत्तद्धेत्वाभासदोषेण विधुरीकृतम् ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 व्यक्तिविवेककारेण हि--"यापि विभावादिभ्यो रसादीनां प्रतीतिः सानुमान एवान्तर्भवितुमर्हति ।  
 विभावानुभावव्यभिचारिप्रतीतिर्हि रसादिप्रतीतेः साधनमिष्यते" ।  
 ते हि रत्यादीनां भावानां कारणकार्यसहकारिभूतास्ताननुमापयन्त एव रसादीन्निष्पादयन्ति ।  
 त एव प्रतीयमाना आस्वादपदवी गताः सन्तो लसा उच्यन्ते, इत्यवश्यम्भावी तत्प्रतीतिक्रमः केवलमाशुभावितयासौ न लक्ष्यते, यतो ऽयमद्याप्यभिव्यक्तिक्रमः" इति यदुक्तम् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, य) व्याचष्टे---व्यक्तिविवेककारेणेति ।  
@@ -594,12 +620,13 @@ title = "०५"
 रत्याद्यनुमितेर्विभावादिज्ञानानन्तर्यस्याशुभावितया व्यापत्याद्युपस्थित्यधीनानुमितिक्रमो न तक्ष्यत इत्यर्थः ।  
 किन्तु विभावादिभिरेव रत्यादिर्व्यज्यत इत्यवे भ्रमो जायत इत्याह---यतो ऽयमद्यापीति ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 तत्र प्रष्टव्यम्--किं शब्दाभिनयसमर्पितविभावादिप्रत्ययानुमितरामादिगतरागादिज्ञानमेव रसत्वेनाभिमतं भवतः, तद्भावनयाभावकैर्भाव्यमानः स्वप्रकाशानन्दो वा ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, र) शब्दाभिनयेति---शब्दो विभावादिवाचकः शब्दः, अभिनयो नाट्याभिनयः, सर्मणं ज्ञापनम्, रागो ऽनुरागो रतिः ।  
@@ -607,13 +634,14 @@ title = "०५"
 स्वप्रकाशानन्दो वेत्यत्रानुमिति इति शेषः ।  
 अनुमितिविषयस्यैव वितर्क्यमाणत्वात् ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 आद्ये न विवादः, किन्तु "रामादिगतरगादिज्ञानं रससञ्ज्ञया नोच्यते ऽस्माभिः" इत्येव विशेषः ।  
 द्वितीयस्तु व्याप्तिग्रहणाभावाद्धेतोराभासतयासिद्ध एव ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ल) न विवाद इति ।  
@@ -632,13 +660,14 @@ title = "०५"
 (लो, ओ) हेतोराभासतयेति---"आभासत्वेन हेतूनाम्ऽ; इति कारिकापदार्थः ।  
 कथं हेतोराभासतेत्याह---व्याप्तिग्रहणाभावादिति ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 यच्चोक्तं तेनैव---  
 "यत्र यत्रैवंविधानां विभावानुभावसात्त्विकसञ्चारिणामभिधानमभिनयो वा तत्र तत्र शृङ्गारादिरसाविर्भावः" इति सुग्रहैव व्याप्तिः पक्षधर्मता च ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, व) व्यक्तिविवेककारेण सम्बन्धविशेषणविभावादीनां यथोक्तानन्दरूपसव्याप्यता पक्षधर्मता च साध्यते, दूषयितुं तदप्युत्थापयति---यच्चोक्तमिति ।  
@@ -653,15 +682,16 @@ title = "०५"
 पक्षधर्मतेत्यन्तेन ।  
 तस्मादतः शृङ्गाररसाविर्भाव इति रूपः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 तया--  
 "यार्ऽथान्तराभिव्यक्तौ वः सामग्रीष्टा निबन्धनम् ।  
 सैवानुमितिपक्षे नो गमकत्वेन सम्मता" ॥  
 इति ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, श) अस्मिन्नेतस्य कारिकामाह--यार्थान्तरेति ।  
@@ -676,14 +706,15 @@ title = "०५"
 तस्य व्याप्तिग्रहणं विना आभासतैव स्यादिति भवतामपि व्याप्तिग्रहणं विना व्यङ्ग्यज्ञानं न सम्भवतीति भावः ।  
 सम्मतेत्यत्रेतिपदस्य यच्चोक्तमित्यत्र सम्बन्धः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 इदमपि नो न विरुद्धम् ।  
 न ह्येवंविधा प्रतीतिरास्वाद्यत्वेनास्माकमभिमता किन्तु--स्वप्रकाशमात्रविश्रान्तः सान्द्रानन्दनिर्भरः ।  
 तेनात्र सिषाधयिषितादर्थादर्थान्तरस्य साधनाद्धेतोराभासता ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ष) दूषयति---इदमपीति ।  
@@ -703,15 +734,16 @@ title = "०५"
 साधितमर्थान्तरम् ।  
 तत्र काव्ये शृङ्गारादिरस इत्यादिज्ञानस्यानुमेयत्वम् ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 यच्च "मम धम्मिअ--" इत्यादौ (२४२ पृ।) प्रतीयमानं वस्तु ।  
 "जलकेलितरलकरतलमुक्तपुनः पिहितराधिकावदनः ।  
 जगदवतु कोकयूनोर्विघटनसङ्घटनकौतुकी कृष्णः" ॥  
 इत्यादौ च रूपकालङ्कारादयो ऽनुमेया एव ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, स) यत्र वस्तुनो ऽलङ्कारस्य वा व्यञ्जना तत्र वस्त्वलङ्कारौ अनुमानगम्यौ एवेति नैयायिकमतं दूषयितुमुत्थामपयति---यच्चेति ।  
@@ -739,12 +771,13 @@ title = "०५"
 जलकेलीत्यादौ रूपकालङ्कारः ।  
 राधिकामुखस्य चन्द्रत्वस्य व्यङ्ग्यत्वाच्चन्द्रदर्शनादर्शनाभायां हि रात्रिसद्भावाभावबुद्ध्या चकवाकयोर्विघनसङ्घटने भवतः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 तथाहि---"अनुमानं नाम पक्षसत्त्वसपक्षसत्त्वविक्षव्यावृत्तत्वविशिष्टाल्लिङ्गल्लिङ्गिनो ज्ञानम् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ह) तत्र वस्तुरूपं व्यङ्ग्यमुपक्रम्य तस्यानुमेयतां घटयति---तथा हीति ।  
@@ -757,13 +790,14 @@ title = "०५"
 पक्षे पर्वतादौ सपक्षे महानसादौ च विपक्षे जलह्रदादौ व्वावृत्तत्वम् ।  
 लिङ्गाद् व्याप्याद् धूमादेः लिङ्गिनि व्यापके वह्न्यादौ ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 ततश्च वाच्यादसम्बद्धोर्ऽथंस्तावन्न प्रतीयते ।  
 अन्यथातिप्रसङ्गः स्यात्, इति बोध्यबोधकयोरर्थयोः कश्चित्सम्बन्धो ऽस्त्येव ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, क) लिङ्ग्यस्य त्रिरूपता च साध्यव्याप्तिसत्त्वे एव सम्भवतीति ।  
@@ -776,14 +810,15 @@ title = "०५"
     
 (लो, उ) अत्र प्रकृते, "भ्रम धार्मिकऽ; इत्यादौ बोध्यार्ऽथो व्यङ्ग्यो बोधको वाच्यः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 ततश्च बोधकोर्ऽथो लिङ्गम्, बोध्यश्च लिङ्गी, बोधकस्य चार्थस्य पक्षसत्त्वं निबद्धमेव ।  
 सपक्षसत्त्वविपक्षव्यावृत्तत्वे अनिबद्धे अपि सामर्थ्योदवसेये ।  
 तस्मादत्र यद्वाच्यार्थाल्लिङ्गरूपाल्लिङ्गिनो व्यङ्ग्यार्थस्यावगमस्तदनुमान एव पर्यवस्यति" इति ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ख) बोधकस्य चार्थस्य इति ।  
@@ -797,12 +832,13 @@ title = "०५"
 पक्षे गोदावरीतीरनिकुञ्जरूपे आश्रये सामर्थ्यादवसेय इति न खलु सपक्षसत्त्वविपक्षव्यावृत्तत्वाभावः ।  
 लिङ्गात्साध्यावगमः स्यात्--लिङ्गिनः साध्यस्य भीरोरभ्रमणरूपव्यङ्ग्यस्य ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 तन्न, तथा ह्यत्र "भम अम्मिअ-" इत्यादौ (२४२ पृदृ) गृहे श्वनिवृत्त्या विहितं भ्रमणं गोदावरीतीरे सिंहोपलब्धेरभ्रमणमनुमापयति" इति यद्वक्तव्यं तत्रानैकान्तिको हेतुः ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ग) दूषयितुं तदभिमतार्थमनुवदति--तन्न तथा हीति ।  
@@ -819,12 +855,13 @@ title = "०५"
 अयमर्थः--यस्य खलु भीरोर्गृहे श्वनिवृत्त्या भ्रमणं विहितं स कथं संहोपलब्धिस्थाने भ्रमिष्यति ।  
 अनैकान्तिकः साध्यव्यभिचारी ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 भीरोरपि गुरोः प्रभोर्वा निदेशेन प्रियानुरागेण वा गमनस्य सम्भवात्, पुश्चल्या वचनं प्रामाणिकं न वेति सन्दिग्धासिद्धेश्च ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, घ) व्यभिचारं ग्राहयति---भीरोरपीति ।  
@@ -840,12 +877,13 @@ title = "०५"
 पुंश्चल्या वचनम्--भ्रम धार्मिकेत्यादिवचनम् ।  
 किञ्च य खलु वीरः स्पर्शादिशङ्कया शुनो बिभेति स संहसद्भावस्थानं प्रत्युत मृगयादिकुतूहलेन गच्छतीति दर्शनाद्विरुद्धो भ्रमणरूपसाध्यविरुद्धस्य साधनात् ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 "जलकेलि-" इत्यत्र "य आत्मदर्शनादर्शनाभ्यां चक्रवाकविघटसङ्घटनकारी स चन्द्र एव" इत्यनुमितिरेवेयमिति न वाच्यम्, उत्त्रासकादावनैकान्तिकत्वात् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ङ) "जलकेलिऽ; इत्यादौ अलङ्कारस्यानुमेयतामपि हेतोर्व्यभिचाराद् दूषयति---जलकेलीत्यत्रेति ।  
@@ -860,13 +898,14 @@ title = "०५"
     
 (लो, ऌ) उत्त्रासकः--यस्य करतालदानादिनोत्रासेन पक्षिणो न घटन्ते, तदभावे च सङ्घटन्ते ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 "एवंविधोर्ऽथ एवंविधार्थबोधक एवंविधार्थत्वात्, यन्नैवं तन्नैवम्" इत्यनुमाने ऽप्याभाससमानयोगक्षेमो हेतुः ।  
 "एवंविधार्थत्वात्" इति हेतुना एवंविधानिष्टसाधनस्याप्युपपत्तेः ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, च) सामान्यसिद्ध्यव्याप्त्या व्यङ्ग्यस्यानुमेयताप्रदर्शनमपि दूषयितुमाहएवंविधेति ।  
@@ -881,12 +920,13 @@ title = "०५"
 (लो, ए) योगक्षेम इतिकर्तव्यता आभासस्य; यथा इतिकर्तव्यता कार्यनिष्पादनं तथैवेवंविधार्थत्वादितिहेतोरिति भावः ।  
 कुत इत्याह---एवमिति ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 तथा "दृष्टि हे प्रतिवेशिनि ! क्षणमिहाप्यस्मद्गृहे-" इत्यादौ (२५० पृदृ) नलग्रन्थीनां तनूल्लिखनम्, एकाकितया च स्त्रोतोगमनम्, तस्याः परकामुकोपभोगस्य लिङ्गिनो लिङ्गमित्युच्यते; तच्चात्रैवाभिहितेन स्वकान्तस्नेहेनापि सम्भवतीत्यनैकान्तिको हेतुः ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, छ) श्लोकान्तरेपि व्यङ्ग्यान्तरस्यानुमेयतां हेतोर्व्यभिचारेण दूषयितुमाह--तथा यद्दृष्टिमिति ।  
@@ -902,23 +942,25 @@ title = "०५"
 (लो, ऐ) इममेवाभिमतमर्थमुदाहरणेष्वपि हेत्वाभासं दर्शयन् द्रढयतितथेति ।  
 हेतुर्वाच्यार्ऽथः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 यच्च "निःशेषच्युतचन्दनम्--" इत्यादौ ( ६२ पृ।) दूत्यास्तत्कामुकोपभोगो ऽनुमीयते तत्किं प्रतिपाद्यतया दूत्या, तत्कालसन्निहितैर्वान्यैः, तत्काव्यार्थभावनया वा सहृदयैः ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ज) निः शेषच्युतेत्यादावपि दूत्यास्तत्कामुकोपभोगस्य व्यङ्ग्यस्यानुमेयतां दूषयितुमाह---यच्चेति ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 आद्ययोर्न विवादः ।  
 तृतीये तु तथाविधाभिप्रायविरहस्थले व्यभिचारः ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, झ) आद्ययोर्न विवाद इति---दूतिकर्तृकमनुमानं तावन्न सम्भवत्येव, तस्यास्तदुपयोगस्य प्रत्यक्षसिद्धत्वेन सिद्धसाधनात् ।  
@@ -934,12 +976,13 @@ title = "०५"
 (लो, ओ) न विवाद इति---न खलु वयं दूत्यास्तत्कलसन्निहितानां वानुमानं निराकुर्मः ।  
 तथाविधेति---न खलु, "निः शेषच्युतचन्दनम्ऽ; इत्यादिप्रतिपादिकाया अभिप्रायः केनचिन्निश्चिततया विषयीकृतैत्यर्थः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 ननु वक्त्राद्यवस्थासहकृतत्वेन विशेष्यो हेतुरिति न वाच्यम् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ञ) स्नानादिव्यावृत्तचन्दवनादेर्विशेषणदानेन व्यभिचाराभावोक्तिं दूषयितुमाह---वक्त्राद्यवस्थेति ।  
@@ -952,12 +995,13 @@ title = "०५"
     
 (लो, औ) नन्विति---वक्त्री यादृशीमवस्थां प्राप्य तथोक्तवती सावस्था हेतोर्विशेषणीकर्तव्येत्यर्थः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 एवंविधव्याप्त्यनुसन्धानस्याभावात् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ट) समाधत्ते--एवंविधेति ।  
@@ -965,12 +1009,13 @@ title = "०५"
 न हि श्लोके तादृशविशेषणमस्ति ।  
 व्याप्त्यादिपदादीदृशविशिष्टहेतुपरिग्रहः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 किञ्चैवंविधानां काव्यानां कविप्रतिभामात्रजन्मनां प्रामाण्यानावश्यकत्वेन सन्दिग्धासिद्धत्वं हेतोः ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ठ) तत्रापि हेतोः सन्दग्धत्वमपि दर्शयति---किञ्चेति ।  
@@ -982,12 +1027,13 @@ title = "०५"
     
 (लो, अ) किञ्चेति---सन्दिग्धासिद्धत्वम्---न खुल कविः सिद्धमेवार्थंवर्णयति ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 व्यक्तिवादिना चाधमपदसहायानामेवैषां पदार्थानां व्यञ्जकत्वमुक्तम्, तेन च तत्कान्तस्याधमत्वं प्रामाणिकं न वेति कथमनुमानम् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ड) ननु व्यभिचारिण सन्दिग्धेन वा चन्दनच्यवनादिना कथमुपभोगस्य भवन्मते व्यञ्जनापीत्यत आह---व्यक्तिवादिना चेति ।  
@@ -1004,13 +1050,14 @@ title = "०५"
 (लो, आ) व्यक्तिवादिना व्यञ्जनाव्यापारस्थापनार्थमुद्युक्तेन ।  
 अधमपदं न पुनस्तस्याधमस्यान्तिकमित्यत्र स्थितम् ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 एतेनार्थापत्तिवेद्यत्वमपि व्यङ्ग्यानामपास्तम् ।  
 अर्थापत्तेरपि पूर्वसिद्धव्याप्तीच्छामुपजीव्यैव प्रवृत्तेः ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ढ) व्यङ्ग्यानामर्थापत्तिवेद्यत्वमपि खण्डयति---एतेनार्थापत्तिरिति ।  
@@ -1022,12 +1069,13 @@ title = "०५"
 कुतः ? इत्याह--- अर्थापत्तेरपीति ।  
 पूर्वगृहीतां व्याप्तिच्छायाम् ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 यथा "यो जीवति स कुत्राप्यवतिष्ठते, जीवति चात्र गोष्ठ्यामविद्यमानश्चैत्रः" इत्यादि ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ण) तादृशं सहचारं दर्शयति--यो जीवतीति ।  
@@ -1059,12 +1107,13 @@ title = "०५"
 व्याप्तिश्च साहचर्यनियमः ।  
 व्याप्तिशरीरं दर्शयति-यथेति ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 किञ्चि---वस्त्रविक्रयादौ तर्जनीतोलनेन दशसङ्ख्यादिवत्सूचनबुद्धिवेद्यो ऽप्ययं न भवति, सूचनबुद्धेरपि सङ्केतादिलौकिकप्रमाणसापेक्षत्वेनानुमानप्रकारताङ्गीकारात् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, त) सूचना नाम कश्चिद् व्यापारः कैश्चिदुच्यते तद्गम्य एव व्यङ्ग्यार्थः इति मतं दूषयितुमाह---किञ्चेति ।  
@@ -1080,13 +1129,14 @@ title = "०५"
 अयं ---व्यङ्ग्यः ।  
 सङ्केतादिलौकिकप्रमाणासापेक्षत्वेनेत्यनेन यत्र यत्रां र्ध्वतर्जनी तत्र तत्र दशंसख्येति पुनर्गृहीतव्याप्तिरुरस्कारवचनम् ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********  
+</details>
+  
     
 यच्च "संस्कारजन्यत्वाद्रसादिबुद्धिः स्मृतिः" इते केचित् ।  
 तत्रापि प्रत्यभिज्ञायामनैकान्तिकतया हेतोराभासता ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, थ) रसादिबुद्धेः स्मृतिरूपत्वं संस्कारजन्यत्वेनानुमन्यमानानां मतं दुषयितुमाह---तत्रापीति ।  
@@ -1098,12 +1148,13 @@ title = "०५"
 (लो, ऊ) स्मृतिर्न च रसादिधीः इतिकारिकापदार्थं विशदयति--यञ्चेति ।  
 अनैकान्तिकत्वं सो ऽयं देवदत्त इत्यादिज्ञानरूपायाः प्रत्यभिज्ञाया अपि संस्कारजन्यत्वात्  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 "दुर्गालङ्घित-" इत्यादौ (५९ पृ।) च द्वितायार्थो नास्त्येव---इति यदुक्तं महिमभटटेन तदनुभवसिद्धिमपलपतो गजनिमीलिकैव ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, द) द्वितीयार्थो महेशरूपो नास्त्येवेति---बुद्धिविषयो नास्त्येवेत्यर्थः अपलपत इत्यस्य, उपरि, इति शेषः ।  
@@ -1113,7 +1164,8 @@ title = "०५"
     
 (लो, ऋ) गजनिमीलिकैवेति--पर्यालोचनं विनापि लोकापवादशङ्कया मत्तगजवच्चक्षुषी निमिल्य वचनमित्यर्थः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 तदेवमनुभवसिद्धस्य तत्तद्रसादिलक्षणार्थस्याशक्यापलापतया तत्तच्छब्दाद्यन्वयव्यतिरेकानुविधायितया चानुमानादिप्रमाणावेद्यतया चाभिधादिवृत्तित्रयाबोध्यतया च तुरीया वृत्तिरुपास्यैवेति सिद्धम् ।
 
@@ -1142,8 +1194,8 @@ title = "०५"
     
 एतच्च विविच्योक्तं रसनिरूपणप्रस्ताव इति सर्वमवदातम् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ध) रसव्यञ्जनाया रसनेत्यपि नाम केचिदाहुरित्याह---रसव्यक्तौ पुनरिति ।  
@@ -1163,7 +1215,8 @@ title = "०५"
     
 इति साहित्यदर्पणलोचने व्यञ्जनाव्यापारस्थापनो नाम पञ्चमः परिच्छेदः  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 इति सहित्यर्पणो व्यञ्जनाव्यापारनिरूपणो नाम पञ्चमः परिच्छेदः ।
 
