--- a/laxaNam/prastutiH/vishvanAtha-sAhitya-darpaNaH/08.md
+++ b/laxaNam/prastutiH/vishvanAtha-sAhitya-darpaNaH/08.md
@@ -8,8 +8,8 @@ title = "०८"
     
 रसस्याङ्गित्वमाप्तस्य धर्माः शौर्यादयो यथा ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, क) गुणनिरूपणमारभते---गुणानाहेति ।  
@@ -21,14 +21,15 @@ title = "०८"
 (लो, अ) एवं दोषान्निरूप्य गुणनिरूपणमवतारयति ।  
 अङ्गित्वमाप्तस्य काव्यात्मभूततया ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 गुणाः---  
 यथा खल्वङ्गित्वमाप्तस्यात्मन उत्कर्षहेतुत्वाच्छौर्यादयो गुणशब्दवाच्याः, तथा काव्ये ऽङ्गित्वमाप्तस्य रसस्य धर्माः स्वरूपविशेषा माधुर्यादयो ऽपि स्वसमर्पकपदसन्दर्भस्य काव्यव्यपदेशस्यौपयिकानुगुण्यभाज इत्यर्थः ।  
 यथा चैषां रसमात्रस्य धर्मत्वं तथा दर्शितमेव ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ख) अङ्गित्वमाप्तस्येत्यनेन शरीरिण आत्मन उपस्थितत्वात् तं दृष्टान्तयति--यथा खल्विति ।  
@@ -48,7 +49,8 @@ title = "०८"
 स्वस्यात्मनो माधुर्य्यादेरेव समर्पकः अर्थात् सहृदयहृदयेषु निवेशयिता यः पदसमुदायः यदनुगुणत्वमिति; यद्यपि माधुर्य्यादीनां रसस्यात्मस्वरूपविशेषात्मकत्वात् उत्कर्षहेतुत्वं नास्ति, तथापि पदसन्दर्भस्य तन्मुखप्रेक्षितयैव तथाविधव्यञ्जकत्वौचित्यानुसारेण "मूद्र्ध्नि वर्गान्त्यगाः स्पर्शा इत्याद्युक्तप्रकारकविनिर्माणात् तत्कारणकत्वम् ।  
 तेन पदसन्दर्भेणनुकूल्यत्तस्य रसोत्कर्षकत्वं माधुर्य्यादिगुणेषु उपचर्य्यत इति दर्शितं प्रथमपरिच्छेदे ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 माधुर्यमोजो ऽथ प्रसाद इति ते त्रिधा ॥ विस्स्द्_८।१ ॥  
     
@@ -63,8 +65,8 @@ title = "०८"
     
 चित्तद्रवीभावमयो ङ्लादो माधुर्यमुच्यते ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ग) माधुर्य्यलक्षणमाह---चित्तद्रवीति--मयट्प्रत्ययो ऽत्र स्वार्थे आह्लाद इत्यत्र आह्लादविशेषवृत्तिः ।  
@@ -75,12 +77,13 @@ title = "०८"
 (लो, ई) ह्लादो ह्लादस्वरूपः तस्य तद्भिन्नत्वस्योक्तत्वात् ।  
 इह चास्वादस्य आनन्दपरपर्य्यायत्वेन स्वादसाधारणत्वात् चित्तद्रवीभावमय इत्यनेनाव्याप्तिपरिहारः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 यत्तु--केनचिदुक्तम्--"माधुर्यं द्रुतिकारणम्" इति तन्न, द्रवीभावस्यास्वादस्वरूपाह्लादाभिन्नत्वेन कार्यत्वाभावात् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, घ) काव्यप्रकाशकृदुक्तं दूषयितुमाह---यत्त्विति ।  
@@ -92,12 +95,13 @@ title = "०८"
 एतच्च द्रवीभावाह्लादयोरभेदं स्वयमभ्युपेत्य दूषितं च ।  
 तन्मते तु द्रवीभावश्चित्तवृत्तिराह्लाद आत्मवृत्तिरित्यनयोरभेद एव नास्ति ।  
 किन्तु आह्लादस्थेन माधुर्य्येण चित्तस्य द्रवीभावो जन्यत एव रागमाधुर्य्येणैवेति  
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 द्रवीभावश्च स्वाभाविकानाविष्टत्वात्मककाठिन्यमन्युक्रोधादिकृतदीप्तत्वविस्मयहासाद्युपहितविक्षेपपरित्यागेन रत्याद्याका रानुविद्धानन्दोद्वोधेनसहृदयचित्तार्द्रप्रायत्वम् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ङ) आस्वादरूपाह्लादाभिन्नत्वेन उक्तं द्रवीभावं दर्शयति---द्रवीभावश्चेति ।  
@@ -114,14 +118,15 @@ title = "०८"
 (लो, उ) स्वाभाविकेति---स्वाभाविकं सहजम् अनाविष्टत्वमनावेशोर्ऽथात् चित्तस्य एव तत्स्वरूपं काठिन्यम्, तथा वीरादाविव मन्युकोधादिजन्यं यद्दीप्तत्वम्, एवं अद्भुतादाविव विस्मयहासयुक्तो यो विक्षेपस्तेषां परित्यागेन परिहारेण ।  
 एतस्य माधुर्याख्यगुणस्य ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 तच्च---  
     
 सम्भोगे करुणो विप्रलम्भे शान्ते ऽधिकं क्रमात् ॥ विस्स्द्_८।२ ॥
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, च) तच्चेति---तच्च माधुर्य्यमित्यर्थः ।  
@@ -133,7 +138,8 @@ title = "०८"
 तस्य सहजानन्दसुन्दरतया माधुर्य्यं प्रायेणेति प्रकृष्टमेव ।  
 क्वचित्तु विषयजुगुप्साद्यनुगमे भेदः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 सम्भोगादिशब्दा उपलक्षणानि ।  
 तेन सम्भोगाभासादिष्वप्येतस्य स्थितिर्ज्ञेया ।  
@@ -143,8 +149,8 @@ title = "०८"
     
 अवृत्तिरल्पवृत्तिर्वा मधुरा रचना तथा ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, छ) तद्व्यञ्जकान् वर्णानाह---मूद्र्ध्निति ।  
@@ -162,26 +168,28 @@ title = "०८"
 रणौ लघुह्रस्वान्तरितौ, तस्य माधुर्य्यस्य व्यक्तौ, एवमसमासा मन्दसमासाश्च ।  
 मधुरा पदान्तरयोगे माधुर्य्यवती ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 यथा---  
 "अनङ्गमङ्गलभुवस्तदपाङ्गस्य भङ्गयः ।  
 जनयन्ति मुहुर्यूनामन्तः सन्तापसन्ततिम्" ॥
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ज) अनेङ्गेत्यादि उदाहरणे सन्ध्युत्पन्नतादृशवर्णौ, सन्तापसन्ततिमित्यत्र उपसर्गधात्वोः सन्धौ द्वावेव ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 यथा वा मम---  
 "लताकुञ्जं गुञ्जन् मदवदलिपुञ्जं चपलयन् समालिङ्गन्नङ्गं द्रुततरमनङ्गं प्रबलयन् ।  
 मरुन्मन्दं मन्दं दलितमरविन्दं तरलयन् रजोवृन्दं विन्दन् किरति मकरन्दं दिशि दिशि" ॥
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, झ) अतो बहून् तादृशान् वर्णान् दर्शयितुमाह---यथा वेति ।  
@@ -195,14 +203,15 @@ title = "०८"
     
 (लो,ऋ) लताकुञ्जमित्यादौ विधानमात्रवर्णने ऽपि शृङ्गारः प्रकारणात् ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 ओजश्चित्तस्य विस्ताररूपं दीप्तत्वमुच्यते ॥ विस्स्द्_८।४ ॥  
     
 वीरबीभत्सरौद्रेषु क्रमेणाधिक्यमस्य तु ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ञ) ओजोलक्षणमाह---ओजश्चित्तस्येति ।  
@@ -213,7 +222,8 @@ title = "०८"
 यथाश्रुते तु चित्तवृत्तेः दीप्तत्वस्य रसवृत्तित्वानुपपत्तेः ।  
 क्रमेणाधिक्यमिति दीप्तत्वरूपफलाधिक्याद् आधिक्यम् ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 अस्यौजसः ।  
 अत्रापि वीरादिशब्दा उपलक्षणानि ।  
@@ -245,8 +255,8 @@ title = "०८"
 
 यथा---"चञ्चद्भुज--" इत्यादि ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ट) तद्व्यञ्जकानाह---वर्गस्येति ।  
@@ -269,14 +279,15 @@ title = "०८"
 चञ्जद्भुजेत्यादिकं नाट्यपरिच्छेदे व्याख्यातम् ।  
 अत्र दीर्घसमासः कतिपये यथोक्ता वर्णाः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 चित्तं व्याप्नोति यः क्षिप्रं शुष्केन्धनमिवानलः ॥ विस्स्द्_८।७ ॥  
     
 स प्रसादः समस्तेषु रसेषु रचनासु च ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ठ) प्रसादगुणलक्षणमाह---चित्तमिति ।  
@@ -297,14 +308,15 @@ title = "०८"
     
 (लो, ए) चित्तं प्रतिपत्तॄणामित्यर्थः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 व्याप्नोति आविष्करोति ।  
     
 शब्दास्तद्व्यञ्जका अर्थबोधकाः श्रुतिमात्रतः ॥ विस्स्द्_८।८ ॥
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ड) तद्व्यञ्जकरचनाव्यक्तिं दर्शयति---शब्दा इति ।  
@@ -315,19 +327,22 @@ title = "०८"
 (लो, ऐ) इह च प्रसादगुणस्य झटित्यर्थप्रकाशनेन उक्तरूपरसनिष्ठप्रसादगुणाभिव्यञ्जनादौ परिचारिकमपि रचनानिष्ठत्वं प्रयत्नविधेयत्वेन रससादचर्येण उक्तिं प्रसादातिक्रमेषु सामान्यमपि सङ्घटना करुणविप्रलम्भशृङ्गारौ व्यनाक्ति ।  
 तदपि परित्यागे मध्यमसमासापि प्रकाशयतिति ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 यथा---  
 "सूचीमुखेन सकृदेव कृतव्रणस्त्वं मुक्ताकलाप ! लुठसि स्तनयोः प्रियायाः ।  
 बाणैः स्मरस्य शतशो विनिकृत्तमर्मा स्वप्ने ऽपि तां कथमहं न विलोकयामि" ॥
 
-************* चोम्मेन्तर्य् *************  
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ढ) सूचिमुखेनेति---प्रियायाः स्तनन्यस्तं मुक्ताहारं परोक्षमपि भावोपनीतं सम्बोध्य विरहिण उक्तिरियम् ।  
 श्लोकार्थस्तु प्रसादात् स्पष्ट एव ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 एषां शब्दगुणत्वं च गुणवृत्त्योच्यते बुधैः ।  
     
@@ -346,8 +361,8 @@ title = "०८"
     
 ओजसि भक्त्या औजः पदवाच्ये शब्द (अर्थ) धर्मविशेषे ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ण) रसवृत्तीनामप्येषां शब्दगुणत्वव्यवहारमुपपादयति---एषामिति ।  
@@ -363,7 +378,8 @@ title = "०८"
 आजः पदवाच्ये रसगुणविशेषे भक्त्या परम्परारूपया भक्त्या शब्दधर्मे ऽन्तर्भवन्तीत्यर्थः ।  
 तदभिन्ना एते इत्यर्थः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 तत्र श्लेषो बहूनामपि पदानामेकपदवद्भासनात्मा ।  
     
@@ -380,8 +396,8 @@ title = "०८"
 उच्चैरुच्चरति ध्वनिः श्रुतिपथोन्माथी यथायं तथा प्रायप्रेङ्खदसङ्ख्यशङ्खधवला वेलेयमुद्रच्छति" ॥  
 अयं बन्धवैकट्यात्मकत्वादोज एव ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, त) तत्र तैरुक्तस्य श्लेषस्य लक्षणमाह---श्लेषो बहूनामिति ।  
@@ -403,7 +419,8 @@ title = "०८"
 प्रेङ्खन्तः वल्गन्तः ।  
 वेला समुद्रवीचिः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 समाधिरारोहावरोहक्रमः ।  
 आरोह उत्कर्षः, अवरोहो ऽपकर्षः, तयोः क्रमो वैरस्यतानावहो विन्यासः ।  
@@ -412,8 +429,8 @@ title = "०८"
 चतुर्थपादे त्वपकर्षः ।  
 तस्यापि च तीव्रप्रयत्नोच्चार्यतया ओजस्विता ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, थ) समाधिकरणलक्षणमाह---समाधिरिति ।  
@@ -429,7 +446,8 @@ title = "०८"
 अस्याप्योजस्यन्तर्भावं दर्शयति---अस्यापीति ।  
 तथा च पादत्रयवशादोजस्यान्तर्भाव इति भावः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 उदारता विकटत्वलक्षणा ।  
 विकटत्वं पदानां नृत्यत्प्रायत्वम् ।  
@@ -445,8 +463,8 @@ title = "०८"
 सुचरणविनिविष्टैर्नूपुरैर्नर्तकीनां झणिति रणितमासीत्तत्र चित्रं कलं च ।  
 अत्र च तन्मतानुसारेण रसानुसन्धानमन्तरेणैव शब्दप्रौढोक्तिमात्रेणौजः ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, द) औदार्य्यलक्षणमाह---उदाहता चेति ।  
@@ -457,14 +475,15 @@ title = "०८"
 तथापि तन्मते तादृशरसानुसन्धानात् प्रागेव शब्दानां नृत्यत्प्रायत्वरूपप्रौढौक्तिमात्रज्ञानात् औजोगुणानुभाव इत्याह---अत्र तन्मते इति ।  
 तथा चात्र सृङ्गारनुगुणे ऽप्येतादृशप्रौढ्या व्यज्यमाने औजस्य स्मदुक्ते औदार्य्यस्यान्तभार्व इति भावः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 प्रसाद ओजोमिश्रितशौथिल्यात्मा ।  
 यथा---  
 "यो यः शस्त्रं बिभर्ति स्वभुजगुरुमदात् पाण्डवीनां चमूनाम्" इति ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ध) प्रसादगुणलक्षणमाह---प्रसाद इति ।  
@@ -472,14 +491,15 @@ title = "०८"
 यो य इति प्राग् व्याख्यातम् ।  
 अत्र कठिनवर्णानामपि मिश्रणादोजस्विता ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 माधुर्यव्यञ्जकत्वं यदसमासस्य दर्शितम् ॥ विस्स्द्_८।१० ॥  
     
 पृथक्पदत्वं माधुर्यं तेनैवाङ्गीकृतं पुनः ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, न) माधुर्य्यलक्षणं पृथक्पदत्वं तच्चास्माकं माधुर्य्यव्यञ्जको ऽसमासेनाङ्गीकृतमित्याह---माधुर्य्येति ।  
@@ -489,7 +509,8 @@ title = "०८"
     
 (लो, इ) असमासस्य वर्णितम्---अवृत्तिरल्पवृत्तिर्वेत्यनेन ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 यथा---"श्वासान्मुञ्चति-" इत्यादि ।  
     
@@ -506,8 +527,8 @@ title = "०८"
 सुकुमारता अपारुष्यम् ।  
 अनयोरुदाहरणे स्पष्टे ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, प) स्पष्टमुदाहरणमिति ।  
@@ -521,7 +542,8 @@ title = "०८"
 (लो, ई) कान्तिर्यथा मम--- नेत्रे खञ्जनगञ्जने सरसिजप्रत्यर्थिपाणिद्वयं वक्षोजौ करिकुम्भविभ्रमकरीमत्युन्नतिं गच्छतः ।  
 कान्तिः काञ्चनचम्पकप्रतिनिधिर्वाणी सुधास्पर्द्धिनी स्मेरेन्दीवरदामसोदरवपुस्तस्याः कटाक्षच्छटा ॥  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 क्वचिद्दोषस्तु समता मार्गाभेदस्वरूपिणी ।  
 अन्यथोक्तगुणेष्वस्या अन्तः पातो यथायथम् ॥ विस्स्द्_८।१३ ॥  
@@ -535,8 +557,8 @@ title = "०८"
 अनेवंविधस्थाने माधुर्यादावेवान्तः पातः ।  
 यथा---"लताकुञ्जं गुञ्जन्-" इत्यादि ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, फ) क्वचिदिति ।  
@@ -551,20 +573,22 @@ title = "०८"
 अनुद्धते वाच्ये इत्यर्थः ।  
 दोषस्तु प्रकृतिविपर्य्ययरूपोबोध्यः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 ओजः प्रसादो माधुर्यं सौकुमार्यमुदारता ।  
 तदभावस्य दोषत्वात्स्वीकृता अर्थगा गुणाः ॥ विस्स्द्_८।१४ ॥  
     
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ब) इदानीम् उक्तनाम्नां भिन्नलक्षणानां परोक्तदशार्थगुणानामप्यनङ्गीकारबीजमाह---ओजः प्रसाद इत्यादि ।  
 ओज आदि उदाहान्ताः पञ्चार्थगुणाः तदभावस्य दोषत्वादेव स्वीकृता इत्यर्थः ।  
 तथा च दोषाभाव एव एते पञ्चगुणा इत्यर्थः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 ओजः साभिप्रायत्वरूपम् ।  
 प्रसादोर्ऽथवैमल्यम् ।  
@@ -573,8 +597,8 @@ title = "०८"
 एषां पञ्जानामप्यर्थगुणानां यथाक्रममपुष्टार्थाधिकपदानवीकृतामङ्गलरूपाश्लीलग्राम्याणान्निराकरणेनैवाङ्गीकारः ।  
 स्पष्टान्युदाहरणानि ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, भ) ओज आदिपञ्चगुणानां लक्षणान्याह---ओज इति ।  
@@ -586,20 +610,22 @@ title = "०८"
 तच्चामङ्गलाश्लीलत्वदोषाभावत्वेन, अग्रम्यतावैदग्ध्यप्रतिपादकार्थभिन्नत्वम्; तच्च ग्राम्यत्वदोषाभावत्वेन स्वीकृतमित्यर्थः ।  
 स्पष्टानीति---एतद्दोषपञ्चकरहितश्लोका एवेत्यर्थः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 अर्थव्यक्तिः स्वभावोक्त्यालङ्कारेण तथा पुनः ।  
 रसध्वनिगुणीभूतव्यङ्ग्यानां कान्तिनामकः ॥ विस्स्द्_८।१५ ॥
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, म) रसध्वनिः शून्यं वासगृहमित्यादि ।  
 रसगुणीभूतव्यङ्ग्यः ।  
 "अयं स रसनोत्कर्षो" त्यादि अपराङ्गम् ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 अङ्गीकृत इति सम्बन्धः ।  
 अर्थव्यक्तिर्वस्तुस्वभावस्फुटत्वम् ।  
@@ -617,22 +643,23 @@ title = "०८"
     
 श्लेषो विचित्रतामात्रमदोषः समता परम् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, य) विचित्रतामात्रमिति---तथा च वैचित्र्यमलङ्कार इत्यलङ्कारसामान्यलक्षणाक्रान्तत्वादलङ्कार एवैसौ न गुण इत्यर्थः ।  
 समतेति ।  
 समता परमदोषो दोषाभावमात्रमित्यर्थः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 श्लेषः क्रमकौटिल्यानुल्वणत्वोपपत्तियोगरूपघटनात्मा ।  
 तत्र क्रमः क्रियासन्ततिः, विदग्धचेष्टितं कौटिल्यम्, अप्रसिद्धवर्णनाविरहो ऽनुल्वणत्वम्, उपपादकयुक्तिविन्यास उपपत्तिः एषां योगः सम्मेलनं स एव रूपं यस्या घटनायास्तद्रूपः श्लेषो वैचित्र्यमात्रम् ।  
 अनन्यसाधारणरसोपकरित्वातिशयविरहादिति भावः ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, र) तत्र श्लेषलक्षणमाह---श्लेषक्रमेति ।  
@@ -643,21 +670,23 @@ title = "०८"
 अनन्येति ।  
 माधुर्य्यादयस्तदन्तर्भूतं गुणान्तरं वा यथा विलक्षणरसोपकारातिशयहेतुरस्य, तथात्वविरहान्न गुणत्वभित्यर्थः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 यथा---  
 "दृष्ट्वैकानसांस्थिते प्रियतमे-" इत्यादि ।  
 अत्र दर्शनादयः क्रियाः, उभयसमर्थनरूपं कौटिल्यम्, 
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ल) दृष्ट्वैकेति---प्रियतमे प्रियतमाद्वयम् एकासनसंस्थित तद् द्वयं दृष्ट्वा धूर्त्तो नायकः पश्चात् पृष्ठतः उपेत्य विहितक्रीडानुबन्धच्छलः सन् एकस्या नयने नयनद्वयं पिधाय ईषद्वक्रितकन्धरः सपुलकः सन् आदरादपरां चुम्बति ।  
 अपरां कीदृशी, प्रेम्णा उल्लसन्मनसाम् अन्तर्हासेन लसत्कपोले पुलको यस्यास्तादृशी च ।  
 उभयसमर्थनेति---पिहितनयनायाः क्रोधः, चुम्बितायाः प्रीतिश्चेत्युमयं पृष्टतो गमनेन नयनपिधानेन च विदग्धचेष्टितरूपकौटिल्येन तत्समर्थनं समर्थनरूपमित्यत्र करणे ल्युट् ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 लोकसंव्यवहाररुपमनुल्वणत्वम्, एकासनसंस्थिते, "पश्चादुपेत्य" "नयने पिधाय" "ईषद्वक्त्रितकन्धरः" इति चोपपादकानि, एषां योगः ।  
 अनेन च वाच्योपपत्तिग्रहणव्यग्रतया रसत्वादौ व्यवहितप्राय इत्यस्यागुणता ।  
@@ -665,8 +694,8 @@ title = "०८"
 स च प्रक्रमभङ्गरूपविरह एव ।  
 स्पष्टमुदाहरणम् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, व) लोकव्यवहारेति---अन्यलोकैरप्येवं करणात् ।  
@@ -678,7 +707,8 @@ title = "०८"
 स्पष्टमिति ।  
 प्रक्रमभङ्गदोषरहितश्लोक एवेत्यर्थः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 न गुणत्वं समाधेश्च---  
     
@@ -691,8 +721,8 @@ title = "०८"
 अत्र नीलोत्पलनयनयोरतिप्रसिद्धं सादृश्यं विच्छित्तिविशेषेण निबद्धम् ।  
 अस्य चासाधारणशोभानाधायकत्वान्न गुणत्वम्, किन्तु काव्यशरीरमात्रनिर्वर्तकत्वम् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, श) अयोनिरन्यैरवर्णितार्थः ।  
@@ -709,7 +739,8 @@ title = "०८"
 (लो, ऊ) अयोनिः पूर्वकविभिरदृष्टोर्ऽथः ।  
 काव्यशरीरमात्रनिर्वाहकत्वमेतत् प्रकारद्वयव्यतिरेकेण काव्यशरीरानिर्वाहात् ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 क्वचित् "चन्द्रम्" इत्येकस्मिन् पदार्थे वक्तव्ये "अत्रेर्नयनसमुत्थं ज्योतिः" इति वाक्यवचनम् ।  
     
@@ -721,8 +752,8 @@ title = "०८"
 
 क्वचित् "निदाघशीतलहिमकालोष्ण्सुकुमारशरीरावयवा योषित्" इति वाक्यार्थे वक्तव्ये "वरवणिनी" इति पदाभिधानम् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ष) प्रौढिरोज इत्यपरः परोक्त ओजोगुणः ।  
@@ -734,7 +765,8 @@ title = "०८"
 सर्वावयवशोभाढ्या सा स्मृता वरवर्णिनी ।  
 इति वरवर्णिनीलक्षणं व्यासं दर्शयदि ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 क्वचिदेकस्य वाक्यार्थस्य किञ्चिद्विशेषनिवेशादनेकैर्वाक्यारभिधानमित्येवंरूपो व्यासः ।  
 क्वचिद्वहुवाक्यप्रतिपाद्यस्यैकवाक्येनाभिधानमित्येवंरूपः समासश्च,  
@@ -761,8 +793,8 @@ title = "०८"
 
 अपि तु वैचित्र्यमात्रावहत्वम् ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, स) क्वचिदेकस्येति---वेशेषात् विच्छेदविशेषात् खण्डखण्डवाक्येन कथनादित्यर्थः ।  
@@ -773,7 +805,8 @@ title = "०८"
 वैचित्र्यमात्रेति तथा चालङ्कार एवायमित्यर्थः ।  
 इति श्रीमहेश्वरन्यायालङ्कारभट्टाचार्य्यविरचितायां साहित्यदर्पणटीकायां गुणविवेचनाख्यस्याष्टमपरिच्छेदस्य विवरणम्  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 ---तेन नार्थगुणाः पृथक् ॥ विस्स्द्_८।१६ ॥  
     
