--- a/laxaNam/prastutiH/vishvanAtha-sAhitya-darpaNaH/09.md
+++ b/laxaNam/prastutiH/vishvanAtha-sAhitya-darpaNaH/09.md
@@ -6,8 +6,8 @@ title = "०९"
 
 अथोद्देशक्रमप्राप्तमलङ्कारनिरूपणं बहुवक्तव्यत्वेनोल्लङ्घ्य रीतिमाह---  
     
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, क) उद्देशेति---गुणआलङ्काररीतय इत्युद्देशे ऽलङ्कारस्य प्रागुद्दिष्टत्वेन तदुल्लङ्घयम् इत्यर्थः ।  
@@ -19,18 +19,20 @@ title = "०९"
 (लो, अ) इदानीं रीतिं निरूपयितुकामः सङ्गति करोति---अथोद्देशेति ।  
 बहुवक्तव्यत्वेन उल्लङ्घ्यकमं सूचीकटाहन्यायादित्यर्थः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 पदसङ्घटना रीतिरङ्गसंस्थाविरोषवत् ।  
 उपकर्त्रो रसादीनां---
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ख) रसादीनामित्यादिपदात् समस्तासंलक्ष्यक्रमपरिग्रहः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 रसादीनामर्थाच्छब्दार्थशरीरस्य काव्यस्यात्मभूतानाम् ।  
     
@@ -59,8 +61,8 @@ title = "०९"
 वर्गद्वितीयबहुला स्वल्पप्राणाक्षरा च सुविधेया ॥  
 अत्र दशगुणास्तन्मतोक्ताः श्लेषादयः ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ग) अनङ्गमङ्गलभुव इत्यादि व्याख्यातम् ।  
@@ -75,7 +77,8 @@ title = "०९"
 अत्र रुद्रटाचार्य्यमतप्रकटनम् ।  
 एकसमस्ता एकपदसमासयुक्ता, स्वल्पप्राणाक्षरा मूर्द्ध्ना मृद्वृत्तेत्यादिवत् न कष्टोच्चारणीयवर्णा ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 ओजः प्रकाशकैर्वणैर्बन्ध आडम्बरः पुनः ॥ विस्स्द्_९।३ ॥  
     
@@ -86,8 +89,8 @@ title = "०९"
 "बहुतरसमासयुक्ता सुमहाप्राणाक्षरा च गौडीया ।  
 रीतिरनुप्रासमहिमपरतन्त्रा स्तोकवाक्या च" ॥
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, घ) आडम्बर उद्दतवर्णघटितः ।  
@@ -100,13 +103,14 @@ title = "०९"
     
 (लो, ई) अनुप्रासमहिमपरतन्त्रानुप्रासबहुला ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 ---वर्णैः शेषैः पुनर्द्वयोः ।  
 समस्तपञ्चषपदो बन्धः पाञ्चालिका मता ॥ विस्स्द्_९।४ ॥
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ङ) पाञ्चालिकां रीतिमाह---वर्णैरिति ।  
@@ -114,15 +118,16 @@ title = "०९"
 समस्तपञ्चमपद इति अत्र पदपदम् अक्षरम् ।  
 तेन समासगतपञ्चमाक्षर इत्यर्थः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 द्वयोर्वैदर्भोगौड्योः ।  
 यथा---  
 "मधुरया मधुबोधितमाधवीमधुसमृद्धिसमेधितमेधया ।  
 मधुकराङ्गनया मुहुरुन्मदध्वनिभृता निभृताक्षरमुज्जगे" ॥
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, च) मधुरयेति ।  
@@ -131,14 +136,15 @@ title = "०९"
 तथोन्मदद्वनिभृता उच्चत्वमेवोन्मदत्वम् ।  
 अत्र मकारनकारौ पञ्चमवर्णौ समासगतौ ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 भोजस्त्वाह---  
 "समस्तपञ्चषपदामोजः कान्तिसमन्विताम् ।  
 मधुरां सुकुमारां च पाञ्चालीं कवयो विदुः" ॥
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, छ) कण्ठारणकृतो भोजस्य सम्पतलक्षणमाह---भोजस्त्विति ।  
@@ -155,7 +161,8 @@ title = "०९"
     
 (लो, उ) ओजः--कान्ती तन्मतोक्तौ गुणविशेषौ ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 लाटी तु रीतिर्वैदर्भोपाञ्चाल्योरन्तरे स्थिता ।  
     
@@ -169,8 +176,8 @@ title = "०९"
 "अयमुदयति मुद्राभञ्जनः पद्मिनीनामुदयगिरिवनालीबालमन्दारपुष्पम् ।  
 विरहविधुरकोकद्वन्द्वबन्धुविभिन्दन् कुपितकपिकपोलक्रोडताम्रस्तमांसि" ॥
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ज) अयमुदयतीति ।  
@@ -184,7 +191,8 @@ title = "०९"
 कोपशात् कपोलस्य ताम्रता क्रोडस्य तु स्वाभाविकी ।  
 अत्र भञ्जनेति, मन्दारेति, द्वन्द्वबन्धुरिति, भिन्दन्निति पञ्चममूर्द्धवर्णानां वैदर्भोघटकत्वं तच्छेषवर्णानाम्बहूनामेवं पाञ्चालीघटकत्वमित्युभयमिश्रणम् ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 कश्चिदाह---  
 "मृदुपदसमाससुभगा युक्तैर्वर्णैर्न चातिभूयिष्ठा ।  
@@ -197,8 +205,8 @@ title = "०९"
 
 उचितविशेषणपूरितवस्तुन्यासा भवेल्लाटी" ॥
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, झ) कश्चिदाहेति---लाटीलक्षणमिति शेषः ।  
@@ -208,7 +216,8 @@ title = "०९"
 एतदप्युक्तोदाहरणे एव सम्भवति ।  
 तत्तद्गुणव्यञ्जकानां वर्णादीनां तत्तद्गुणव्यञ्जनार्थमुपादेयत्वेनोक्तत्वात् ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 अन्ये त्वाहुः---  
 "गौडी डम्बरबद्धा स्याद्वैदर्भो ललितक्रमा ।  
@@ -216,8 +225,8 @@ title = "०९"
     
 क्वचित्तु वक्त्राद्यौचित्यादन्यथा रचनादयः ॥ विस्स्द्_९।५ ॥
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ञ) क्वचित्तत्तद्रसाभावेन तद्गुणव्यञ्जनार्थमनुपादेयत्वे ऽपि वक्त्राद्यौचित्याद् अन्यथा रचनादय इत्याह---क्वचिद्वक्त्रादीति ।  
@@ -228,7 +237,8 @@ title = "०९"
 (लो, ॠ) इह सङ्घटनादीनां गुणपरतन्त्रत्वे ऽपि विशेषमाह--क्वचिदिति ।  
 यदाह सर्वत्रैव रसाश्रिता रचनादयो वक्त्राद्यपेक्षायां तु किञ्चित्तरातम्यमिति ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 वाक्त्रदीत्यादिशब्दाद्वाच्यप्रबन्धौ । रचनादीत्यादिशब्दाद्वृत्तिवर्णौ ।  
 तत्र वक्त्रौचित्याद्यथा---  
@@ -236,8 +246,8 @@ title = "०९"
 कृष्णाक्रोधग्रढूतः कुरुकुलनिधनोत्पातनिर्घातवातः केनास्मत्सिंहनादप्रतिरसितसखो दुन्दुभिस्ताडितो ऽयम्" ॥  
 अत्र वाच्यक्रोधाद्य(न) भिव्यञ्जकत्वे ऽपि भीमसेनवक्तत्वेनोद्धता रचनादयः ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ट) मन्थायस्तेत्यादि---रणस्थले दुन्दुभिशब्दं श्रुत्वा भीमस्येयं पृच्छा ।  
@@ -259,7 +269,8 @@ title = "०९"
 (लो, ऌ) मन्थायस्तेत्यादौ कोधाव्यञ्जकत्वं वाक्यस्य च नाटकरूपस्याभिनेयदुः- खावहत्वात् ।  
 अनुचितमपि दीर्घसमासान्तत्वे ऽपि विशेषमाह---धीरोद्धतो भीमसेनो वक्तेति नानौचित्यमिति भावः ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 वाच्यौचित्याद्यथोदाहृते "मूर्धव्याधूयमान---" इत्यादौ ।  
     
@@ -273,14 +284,15 @@ title = "०९"
 एवमाख्यायिकायां शृङ्गारे ऽपि न मसृणवर्णादयः ।  
 कथायां रौद्रे ऽपि नात्यन्तमुद्धताः ।
 
-************* चोम्मेन्तर्य् *************  
-    
+<details><summary>टीका</summary>
+
 विज्ञप्रिया:  
     
 (वि, ठ) आख्यायिकाकथे प्रबन्धविशेषौ ।  
 इति श्रीमहेश्वरन्यायालङ्कारभट्टाचार्य्यकृतायां साहित्यदर्पणटीकायां रीतिनिरूपणख्यस्य नवमपरिच्छेदस्य विवरणम् ।  
     
-********** एन्द् ओफ़् चोम्मेन्तर्य् **********
+</details>
+
 
 एवमन्यदपि ज्ञेयम् ।  
     
